It is 17 pieces for the time being

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -1,4 +1,4 @@
-\section{KH Coder}
+\section{テキストマイニングソフト　KH Coder}
 
 
 
@@ -12,17 +12,24 @@
 
 　カウンセリングを文字起こししたテキストデータを形態素解析し、各単語の共起関係のネットワーク図を描画した。今回、テキストデータの形態素解析、および共起関係のネットワークの可視化には、テキストマイニングのフリーソフトウェアである、樋口耕一氏の KH Coder を使用した。解析には、統計計算とグラフィックスのための環境「R」を内部で利用している。
 テキストデータの形態素解析、および共起関係のネットワークの可視化には、テキストマイニングのフリーソフトウェアである、樋口耕一氏のKH Coderを使用した。解析には、統計計算とグラフィックスのための環境「R」を内部で利用している。
-　KH Coderで形態素解析後のデータの共起ネットワーク可視化を行うにあたり、どこからどこまでの範囲内で共起すれば共起判定を行うかという集計単位をKH Coder上で設定可能である。KH Coderは改行によって段落を認識し、句点によって文を認識する。よってひと段落ないし一文を集計単位として設定することが可能になっている。1)
+　KH Coderで形態素解析後のデータの共起ネットワーク可視化を行うにあたり、どこからどこまでの範囲内で共起すれば共起判定を行うかという集計単位をKH Coder上で設定可能である。KH Coderは改行によって段落を認識し、句点によって文を認識する。よってひと段落ないし一文を集計単位として設定することが可能になっている。\cite{kh}
 
-　KH Coderで形態素解析後のデータの共起ネットワーク可視化を行うにあたり、どこからどこまでの範囲内で共起すれば共起判定を行うかという集計単位をKH Coder上で設定可能である。KH Coderは改行によって段落を認識し、句点によって文を認識する。よってひと段落ないし一文を集計単位として設定することが可能になっている。1)
+　KH Coderで形態素解析後のデータの共起ネットワーク可視化を行うにあたり、どこからどこまでの範囲内で共起すれば共起判定を行うかという集計単位をKH Coder上で設定可能である。KH Coderは改行によって段落を認識し、句点によって文を認識する。よってひと段落ないし一文を集計単位として設定することが可能になっている。\cite{kh}
 
 
 　ヨーガ心療のカウンセリングを文字起こししたテキストデータには、「心療内科における摂食障害専門ヨーガ療法グループ」の「第11回　ヨーガ療法事例検討会」2)3)を用いた。
 患者Bに対して2014年9月11日に行われたセッションのヨーガ前のカウンセリングテキストデータを、共起関係の集計単位を段落としてKH Coderで描画した共起ネットワーク図をFig.1に示す。
 
-　共起マップ描画とクラスタリングが同時に進行できない
-共起集計単位が「1文」か「1段落」しか選べない
-因果関係解析によく用いられる係り受け解析ができない
+　デメリットとして、
+\begin{itemize}
+\item 共起マップ描画とクラスタリングが同時に進行できない
+\item 共起集計単位が「1文」か「1段落」しか選べない
+\item 因果関係解析によく用いられる係り受け解析ができない
+\end{itemize}
+
+
+
+といったことがあげられる。
 
 
 
@@ -33,11 +40,7 @@
 　自己組織化マップ単体の問題点としては、クラスターごとの描画色を自分で選べないこと、作成に1分半〜3分時間がかかることが挙げられる。
 
 
-　そこで本システムでは、の可視化手法について３次元的な手法と２次元な手法を用意し、切り替えることができるようにすることで、使用者が分析したい問題に合わせた可視化を実現する。これにより、対話性を向上させることができる。
-
-　そこで提案システムとして、カウンセラーからの質問形態と、 「家族」「仕事」「友人」の単語グループの時間経過に沿った分布変化を可視化した。可視化にあたっては、カウンセリング文字起こしテキストデータを形態素解析し、共起マップなどを描画して「家族」「仕事」「友人」に関連する単語を探すようプログラミングした。
-
-\section{積み重ね折れ線グラフを用いた可視化}
+\section{折れ線グラフを用いた可視化}
 
 %%% 過去に渦と熱輸送について研究した文献として次のものがある．
 
@@ -46,28 +49,26 @@
 
 %%% そこで本研究では先に述べた「物理量の関係が見られる」，「アニメーション表示可能」「自由な視点移動が可能」をシステム要件として設定し，システム開発を行った．
 
-　庄（Webカウンセリングシステムの開発および心理データの可視化）らはWebカウンセリングシステムにおいて、折れ線グラフを用いて患者の話題をした。しかし、ビギナーカウンセラーの指導という観点ではビギナーカウンセラーからの発言内容を患者の発言内容と同時に可視化しなければならない。
+　庄ら\cite{shou}はWebカウンセリングシステムにおいて、折れ線グラフを用いて患者の話題をした。しかし、ビギナーカウンセラーの指導という観点ではビギナーカウンセラーからの発言内容を患者の発言内容と同時に可視化しなければならない。
 
 
-　そのような現世のパターンを調査することに興味があるユーザーにとって、異なるイベントか時点が2つのモデルで違ってハイライトされるかどうかについて見ることが、重要である場合がある。
-この終了までに、モデル(図9を見ます)全体で時間とともに傾向を比較するために、我々は非対称の話題フロー図を作成した。
-軸より上に現れている1つのモデルの話題と下記のように見えている他のモデルの話題で、2つのモデルからの話題密度は、横時間軸に沿って計画される。
-　2つのモデルでハイライトされている傾向とイベントで左右対称(または非対称)を探すのを、これはユーザーが許す。
-
-　特に同じ文書の上でできているモデルのために、大きな変化が、話題の世界的な形にないかもしれない。
-　しかし、個々の話題の作用は、ユーザーにもう一つより1つのモデルを好ませるために、面白い違いを示すことができる。
-　そのような違いを調査するために、我々はユーザーが2つのモデル全体で直接整列する話題を比較するのを許す。
-　他のモデル(第4.1.1節で定める同じ話題調整方法を使用する)で、1つのモデルの個々の話題の上のブラッシングは、その最も整列する話題をハイライトする。
+　Ericら\cite{taskdriven}は、トピックモデリングによって分けたトピックの時間分布を上下の非対称積み重ね折れ線グラフによって可視化した。パターンを調査することに興味があるユーザーにとって、異なるイベントか時点が2つのモデルで違ってハイライトされるかどうかについて見ることが、重要である場合がある。
+この終了までに、モデル全体で時間とともに傾向を比較するために、我々は非対称の話題フロー図を作成した。
+　軸より上に現れている1つのモデルの話題と下記のように見えている他のモデルの話題で、2つのモデルからの話題密度は、横時間軸に沿って計画される。
+　2つのモデルでハイライトされている傾向とイベントで左右対称(または非対称)をユーザーが探す。
+　特に同じ文書の上でできているモデルのために、大きな変化が、話題の世界的な形にない可能性がある。
+%　しかし、個々の話題の作用は、ユーザーに面白い違いを示すことができる。
+　そのような違いを調査するために、Ericらはユーザーが2つのモデル全体で直接整列する話題を比較した。
+　他のモデルで、1つのモデルの個々の話題の上のブラッシングは、その最も整列する話題をハイライトする。
 　話題をクリックすることは、離れて選ばれたものとその最も接近した試合以外の他の全ての話題を濾過する。
-
-　これは、裂けた/合併された話題の間の有益な比較を提供することができる。
+　これは、裂けた、あるいは合併された話題の間の有益な比較を提供することができる。
 　そのような話題は時間全体で一様に割られるかもしれなくて、でなければ、交替するかもしれない。そして、異なるイベントをハイライトする。
 　分裂が典型的なパラメータの意味論的な一つかランダムな人工品であるかどうか決めるのに、この区別は、ユーザーが役立つことができる。
 
 
 
-　一方本研究では、カウンセラーとクライエントの会話において、特にカウンセラーの質問の種類分けをいかに描画するかが重要となる。
+　一方本研究では、カウンセラーとクライエントの会話において、特にカウンセラーの質問の種類分けをいかに描画するかが重要となる。カウンセラーの質問の種類に応じていかにクライエントの回答を引き出せるかを可視化することが重要であるが、カウンセラーの質問とそれに対するクライエントの回答は交互に出現するので、その情報を含めていかに描画するかが重要である。
 
+　そこで提案システムとして、カウンセラーからの質問形態と、 「家族」「仕事」「友人」の単語グループの時間経過に沿った分布変化を可視化した。可視化にあたっては、カウンセリング文字起こしテキストデータを形態素解析し、「家族」「仕事」「友人」に関連する単語を探して仮の分類結果としてグラフを提示する。その上で、ラジオボタンによって「家族」「仕事」「友人」の分類を変更することが出来るようにした。
 
-
-　次章ではどのようにシステムを構成したかを述べる．
+　次章ではどのようにシステムを構成したかについて述べる．
