--- a/main.bib
+++ b/main.bib
@@ -37,7 +37,7 @@
 
 @ARTICLE{taskdriven,
 	author = {Eric Alexander and Michael Gleicher},
-	title = {Task-Driven Comparison of Topic Models}
+	title = {Task-Driven Comparison of Topic Models},
 	journal = "IEEE TRANSACTIONS ON VISUALIZATION AND COMPUTER GRAPHICS",
 		year = 2016,
         	volume = "22",
@@ -68,11 +68,18 @@
 @ARTICLE(kango,
 	author = "杉浦暁代　新美綾子",
 	title = "プロジェクト学習を用いた成人看護学概論の学習により学生が認識した学びと成長 ―テキストマイニングによる分析―",
-	journal = "第44 回日本看護学会?看護教育?学術集会　抄録集",
+	journal = "第44 回日本看護学会 看護教育 学術集会　抄録集",
 	year = 2013,
         pages = "60"
 )
 
+
+@ARTICLE{shou,
+	author = "庄 ?亮",
+	title = "Webカウンセリングシステムの開発および心理データの可視化",
+	year = 2013,
+        pages = "1-116",
+}
 
 
 @book(kh2,
@@ -83,7 +90,7 @@
 )
 
 @book(sn0,
-	author = {キャサリン・コーリンほか},
+	author = {キャサリンコーリンほか},
 	title = {心理学大辞典},
 	publisher = {三省堂},
 	year = 2013
@@ -105,6 +112,6 @@
 
 @article{2014web,
   title={Web カウンセリングシステムの開発および心理データの可視化},
-  author={庄?亮 and others},
+  author={庄,?亮 and others},
   year={2014}
 }
