--- a/chapter3.tex
+++ b/chapter3.tex
@@ -7,14 +7,7 @@
 　まず本論文の実験で用いる対象データについて述べる．後述する全ての実験において、対象データは共通して以下のデータを使用した。
 　本論文の実験で用いる対象データには「心療内科における摂食障害専門ヨーガ療法グループ」の「ヨーガ療法事例検討会」資料\cite{txt1}\cite{txt2}\cite{txt3}\cite{txt4}\cite{txt5}を使用した．
 　後述する提案システムに読み込ませるための前処理として、まず，各カウンセリング回ごとにテキストデータを分けた。
-%%% システム概要は図\ref{fig:4.3}のようになっている。
-% \begin{figure}
-%   \begin{center}
-%     \includegraphics[width=10cm]{4-3.png}
-%   \end{center}
-%   \caption{システム概要}
-%   \label{fig:4.3}
-% \end{figure}
+
 
 \begin{itemize}
 \item 2014年9月11日\cite{txt1}
@@ -50,8 +43,18 @@
 \section{提案システム１}
 
 \subsection{手法}
+
+
 　
 　次に、前セクションで前処理した後のjsonデータを、提案システムがどう処理するかを説明する。
+提案システムのスクリーンショットを図\ref{fig:4.3}に示す。
+ \begin{figure}
+   \begin{center}
+     \includegraphics[width=10cm]{4-3.png}
+   \end{center}
+   \caption{システム概要}
+   \label{fig:4.3}
+ \end{figure}
 　まず、ブラウザ上で各テキストのjsonファイルを読み込んで形態素解析する．
 　形態素解析には，JavaScript言語の形態素解析ライブラリであるkutomoji.jsを使用した．
 　カウンセリング文字起こしテキストデータを形態素解析し，共起マップなどを描画して「家族」「仕事」「友人」に関連する単語を探す．そこから，カウンセラーからの質問形態と， 「家族」「仕事」「友人」の単語グループの時間経過に沿った分布変化を可視化した．
@@ -94,11 +97,11 @@
 
 
 
-　インタラクティブ性がない．現状ではその場でチェックボックスの選択を変えただけではグラフにその選択の変更が反映されず，1回1回ブラウザ上でページをリロードして，カウンセリングの文字起こしテキストデータのjsonファイルも読み込み直す必要が生じている．ブラウザ上でページをリロードしなくも，チェックボックスの選択を変えることでシームレスにグラフが変化することが求められた．
+
 
 \subsubsection{どこがどの発言を表しているかわからない}
 \subsubsection{インタラクティブ性がない}
-描画後にラジオボタンを変えても反応がない。
+　描画後にラジオボタンを変えても反応がない。現状ではその場でチェックボックスの選択を変えただけではグラフにその選択の変更が反映されず，1回1回ブラウザ上でページをリロードして，カウンセリングの文字起こしテキストデータのjsonファイルも読み込み直す必要が生じている．ブラウザ上でページをリロードしなくも，チェックボックスの選択を変えることでシームレスにグラフが変化することが求められた．
 
 \subsubsection{「その他」}
 「開かれた質問」「閉じられた質問」だけでなく、相づちや世間話を「その他」を設けるべきと考えられる。提案システム1においては、「なぜ」「何」などの5W1Hを訊くような疑問視を含む発言を「開かれた質問」として定義し、それ以外を「閉じられた質問」と定義していたので、提案システム1における「閉じられた質問」をさらに、以降のシステムにおいて「閉じられた質問」と「その他」にわける必要があると考えられる。
@@ -162,10 +165,7 @@
 
 　その他，使用した際に不便だと感じたこと，もし実用的なものにするにはどういう機能がついていればいいか等，意見をいただいた．
 
-　発話量の折れ線グラフの色分けについては，１．でも述べましたが，その人の
-
-関心が向いている話題によって分けられますので，分類方法の工夫が必要だと考え
-られる．
+　発話量の折れ線グラフの色分けについては，その人の関心が向いている話題によって分けられるので，分類方法の工夫が必要だと考えられる．
 　また実際には，話している中で関心がどんどん飛んでいく人が多いため，どうしていくか
 　いずれにしても，セラピストの発話については，十分とらえられると思います．質問形式（開かれた，閉じられた）と解釈と，相槌・その他と無駄話に分ける．無駄話と相槌は同レベルではなく，カウンセリングに必要かどうかの重みが違うので，分けた方がよいと考えられる．
 　セラピストのスーパーヴィジョンとして使用していく方が，今は妥当だと考えられる．そのためには，セラピストの発話内容を正確に分類していく方が的確に可視化できると考えられる．
@@ -228,11 +228,7 @@
 
 　提案システム3をカウンセラー1名に使っていただき、以下のコメントをいただいた。
 \begin{itemize}
-\item  　「質問形式が
- 
- 解釈、無駄話
- 
- の２種類しかないため、適切な分類ができませんでした。
+\item  　「質問形式が解釈、無駄話 の２種類しかないため、適切な分類ができませんでした。
  
  　閉じられた質問は、本来セラピスト側の解釈を確認するための質問です。しか
  し、質問形としては開かれた質問と対をなしていますので、これはこれでおいて
@@ -251,6 +247,11 @@
 
 \subsection{手法}
 
+\subsubsection{折りたたみ機能を搭載したラジオボタン}
+　
+
+\subsubsection{画面全体のレイアウトの変更}
+　見やすさの観点から、ラジオボタンによって発言の分類を選択する部分と、縦棒をマウスオーバーした際に実際の文が表示される部分を、積み重ね折れ線グラフの下側に、横に並べて表示するようにした。
 
 \subsection{結果}
 
