dvipdfm to dvipdfmx

--- a/chapter3.tex
+++ b/chapter3.tex
@@ -47,13 +47,13 @@
 
 　
 　次に、前セクションで前処理した後のjsonデータを、提案システムがどう処理するかを説明する。
-提案システムのスクリーンショットを図\ref{fig:4.3}に示す。
+提案システムのスクリーンショットを図\ref{systemtsukaikata}に示す。
  \begin{figure}
    \begin{center}
-     \includegraphics[width=10cm]{4-3.png}
+     \includegraphics[width=10cm]{systemtsukaikata.png}
    \end{center}
    \caption{システム概要}
-   \label{fig:4.3}
+   \label{systemtsukaikata}
  \end{figure}
 　まず、ブラウザ上で各テキストのjsonファイルを読み込んで形態素解析する．
 　形態素解析には，JavaScript言語の形態素解析ライブラリであるkutomoji.jsを使用した．
