--- a/main.bib
+++ b/main.bib
@@ -12,24 +12,24 @@
 }
 
 
-@book{txt1,
+@ARTICLE{txt1,
 	author = {第11回　ヨーガ療法事例検討会},
 	title = {心療内科における摂食障害専門ヨーガ療法グループ 続報},
 	year = 2014
 }
-@book{txt2,
+@ARTICLE{txt2,
 	author = {2015.1.24　事例検討会},
 	title = {心療内科における摂食障害専門ヨーガ療法グループ 続報　その２}
 }
-@book{txt3,
+@ARTICLE{txt3,
 	author = {2015.3.28　事例検討会},
 	title = {心療内科における摂食障害専門ヨーガ療法グループ 続報　その３}
 }
-@book{txt4,
+@ARTICLE{txt4,
 	author = {心療内科における摂食障害専門ヨーガ療法グループ},
 	title = {2015年10月17日事例検討会用資料}
 }
-@book{txt5,
+@ARTICLE{txt5,
 	author = {心療内科における摂食障害専門ヨーガ療法グループ},
 	title = {2015年11月28日事例検討会用資料}
 }
