--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,8 @@
 \documentclass[sotsuron]{kuee}
-\usepackage[dvipdfm]{graphicx}
+\usepackage[dvipdfmx]{graphicx}
+\usepackage{bm}
 \usepackage{amsmath}
-\title{カウンセラーの質問に依る心療内科患者の話題時間変化の可視化}
+\title{カウンセリングにおける会話の流れの可視化に関する研究}
 \author{上辻 智也}
 \professor{小山田 耕二 教授}
 \course{京都大学工学部電気電子工学科}
