--- a/chapter2.tex
+++ b/chapter2.tex
@@ -10,17 +10,10 @@
 
 \subsection{単語共起ネットワーク図}
 
-　カウンセリングを文字起こししたテキストデータを形態素解析し、各単語の共起関係のネットワーク図を描画した。今回、テキストデータの形態素解析、および共起関係のネットワークの可視化には、テキストマイニングのフリーソフトウェアである、樋口耕一氏の KH Coder を使用した。解析には、統計計算とグラフィックスのための環境「R」を内部で利用している。
-テキストデータの形態素解析、および共起関係のネットワークの可視化には、テキストマイニングのフリーソフトウェアである、樋口耕一氏のKH Coderを使用した。解析には、統計計算とグラフィックスのための環境「R」を内部で利用している。
-　KH Coderで形態素解析後のデータの共起ネットワーク可視化を行うにあたり、どこからどこまでの範囲内で共起すれば共起判定を行うかという集計単位をKH Coder上で設定可能である。KH Coderは改行によって段落を認識し、句点によって文を認識する。よってひと段落ないし一文を集計単位として設定することが可能になっている。\cite{kh}
+　KH Coderは、統計計算とグラフィックスのための環境「R」を内部で解析に利用している。
+　KH Coderで形態素解析後のデータの共起ネットワーク可視化を行うにあたり、どこからどこまでの範囲内で共起すれば共起判定を行うかという集計単位をKH Coder上で設定可能である。KH Coderは改行によって段落を認識し、句点によって文を認識する。よってひと段落ないし一文を集計単位として設定することが可能になっている。\cite{manu}
 
-　KH Coderで形態素解析後のデータの共起ネットワーク可視化を行うにあたり、どこからどこまでの範囲内で共起すれば共起判定を行うかという集計単位をKH Coder上で設定可能である。KH Coderは改行によって段落を認識し、句点によって文を認識する。よってひと段落ないし一文を集計単位として設定することが可能になっている。\cite{kh}
-
-
-　ヨーガ心療のカウンセリングを文字起こししたテキストデータには、「心療内科における摂食障害専門ヨーガ療法グループ」の「第11回　ヨーガ療法事例検討会」2)3)を用いた。
-患者Bに対して2014年9月11日に行われたセッションのヨーガ前のカウンセリングテキストデータを、共起関係の集計単位を段落としてKH Coderで描画した共起ネットワーク図をFig.1に示す。
-
-　デメリットとして、
+　KH Coderのデメリットとして、
 \begin{itemize}
 \item 共起マップ描画とクラスタリングが同時に進行できない
 \item 共起集計単位が「1文」か「1段落」しか選べない
