--- a/main.bib
+++ b/main.bib
@@ -19,19 +19,23 @@
 }
 @ARTICLE{txt2,
 	author = {2015.1.24　事例検討会},
-	title = {心療内科における摂食障害専門ヨーガ療法グループ 続報　その２}
+	title = {心療内科における摂食障害専門ヨーガ療法グループ 続報　その２},
+	year = 2015
 }
 @ARTICLE{txt3,
 	author = {2015.3.28　事例検討会},
-	title = {心療内科における摂食障害専門ヨーガ療法グループ 続報　その３}
+	title = {心療内科における摂食障害専門ヨーガ療法グループ 続報　その３},
+	year = 2015
 }
 @ARTICLE{txt4,
 	author = {心療内科における摂食障害専門ヨーガ療法グループ},
-	title = {2015年10月17日事例検討会用資料}
+	title = {2015年10月17日事例検討会用資料},
+	year = 2015
 }
 @ARTICLE{txt5,
 	author = {心療内科における摂食障害専門ヨーガ療法グループ},
-	title = {2015年11月28日事例検討会用資料}
+	title = {2015年11月28日事例検討会用資料},
+	year = 2015
 }
 
 
