--- a/chapter8.tex
+++ b/chapter8.tex
@@ -1,9 +1,9 @@
 \section{結論}
 
-本研究では，システムを開発し，結果に対して適用した．以下に本研究で得られた結論をまとめる．
+本研究では，システムを開発した．以下に本研究で得られた結論をまとめる．
 \begin{itemize}
-\item 提案システムを利用することでの間の因果関係を分析可能である．
-\item 提案システムにより対話的かつ連続的に分析可能である．
+\item 
+\item 
 \end{itemize}
 
 重要な役割を果たすことが明らかとなった．
@@ -12,10 +12,8 @@
 
 本研究で得られた結論を踏まえて，今後検討するべき課題を以下にまとめる．
 \begin{itemize}
-\item 3つ以上の変数間の関係性を分析する機能の実装
-\item 操作性のさらなる向上
+\item また，患者の話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや，カウンセラーの質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められる．
+\item 
 \end{itemize}
 
 
-
-図\ref{fig:7.2}操作性を向上させるためには例えば，操作をより直感的にする，システム上のボタンの数を減らす，といったことができる．
