--- a/main.tex
+++ b/main.tex
@@ -5,9 +5,9 @@
 \title{カウンセリングにおける会話の流れの可視化に関する研究}
 \author{上辻 智也}
 \professor{小山田 耕二 教授}
-\course{京都大学工学部電気電子工学科}
-\department{電気工学専攻}
-\date{平成27年2月12日}
+\course{京都大学工学部}
+\department{電気電子工学科}
+\date{平成28年2月12日}
 
 %----------------------------------------------------------------------
 \graphicspath{{./image/}}
