--- a/chapter3.tex
+++ b/chapter3.tex
@@ -72,6 +72,7 @@
 
 \subsubsection{積み重ね折れ線グラフ}
 　Fig.2において，まず積み重ね折れ線グラフは患者の1回1回の発言の中での，アドラー心理学の各カテゴリの分布を可視化している．ただし1回1回の発言は，話者の交代を発言の区切れ目とする．この積み重ね折れ線グラフにおいて青色は「仕事関係」，ピンク色は「愛（恋愛・家族関係）」，緑色は「交友（友人関係）」に密接に関係する単語を含む文の分布を表している．
+　横軸は時間軸を表現している。ただし対象データである書き起こしテキストデータからは実際の経過秒数は読み取れないので、読み込ませたデータ内における患者の発言量の合計に対して
 
 \subsubsection{カウンセラーの質問を表現する縦棒}
 　次に，積み重ね折れ線グラフにかかっている，紫色ないし濃いグレー色の縦棒は，カウンセラーの質問内容の形態を示す．紫色は5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」，濃いグレー色はYes/Noで答えられる，あるいは一言だけで簡単答えられるような「閉じられた質問」を表現している．第1章で述べた通り，患者が何に問題意識を感じているかをカウンセリングで引き出すには，カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．
