--- a/chapter1.tex
+++ b/chapter1.tex
@@ -1,53 +1,6 @@
 
-%%% Taneda\cite{v1}はタフトグリッド法，スモーク法，油膜法により，一様流れに置いた球体の周りの乱流解析を臨界レイノルズ数付近において行った．
-
-%%% 鈴木ら\cite{k1}は流体中に加熱した角柱を置いた場合の角柱周りの流れをシミュレーションし，流体がぶつかる角柱表面の高渦度層から剥離した孤立渦が，流体の流れる方向と垂直な方向，スパン方向に伸びることを示した．また，この孤立渦が壁面に沿って流れの下流に移動する際に壁面付近の速度の低い流体の回転運動を誘起し，角柱表面の温度の高い流体が遠くへ移動する．それにより，角柱表面における瞬間的な熱移動が促進され，時間平均としての伝熱効率が向上する洗濯効果を説明した．
-
-%%% また，川口ら\cite{n3}は乱流中に準秩序的な渦の群があることを説明している．この渦構造は完全に不規則に見える渦と区別し，乱流渦構造と呼ばれる．この乱流渦構造が壁近傍に存在する場合には，壁近傍の低速流体を壁から離れた高速な領域に持ち上げ，大きな乱れエネルギーを持つ流れを生む．こうした特徴の渦をコヒーレント渦と呼ぶ．
-
-%%% 各章は以下のように構成される．２章では本論文での関連研究を挙げ，３章ではシステムの手法及び構成について説明する．４章では実験方法を述べ，５章ではその結果を分析する．６章では専門家による評価を述べ，７章で本論文の結論と今後の展望について述べる．
-
 
 　心療内科では、心身症やストレスからくる身体症状が取り扱われている。
-
-　心理学の学派の一つに、アドラー心理学がある。アドラー心理学は、オーストリアの精神科医であるアルフレッド・アドラー (A.Adler)が創始し、その後継者たちが発展させた心理学の理論、思想と治療技法の体系である\cite{ad}。17世紀にルネ・デカルトが端を発して以来、1879年にヴィルヘルム・ヴントが世界初の心理学実験室を創設したことで哲学的ルーツから切り離された。ジョン・B・ワトソンが「人間の行動――学習されたか否かを問わず、人間の行動や発話の総体――をその主題とする、自然科学の一部門」と述べて以来、アメリカで行動主義が心理学の有力手法となった一方で、実験的証拠よりも観察と症例に基礎を置いたジグムント・フロイトの考えがヨーロッパを中心に広がっていった。フロイトの考えに初めは賛成していたカール・ユングとアルフレート・アドラーは、後にフロイトの考えに異を唱えた。カール・ユングが唱えたのは、人間誰しも、個人的経験には一切基づいていないあるはっきりと分離された無意識の部分、すなわち「集合的無意識」が存在し、「集合的無意識」は神話や象徴として世代を超えて代々受け継がてきた「元型（アーキタイプ）」から成り立っているということであった。
-　一方、アドラーが初めて示唆したのは、個人の心理は現時点における意識的諸力にも影響されるが、社会的領域や環境の影響も同様に見逃せないということであった。
-　現在、世界保健機関（WHO）憲章前文において「健康とは、病気でないとか、弱っていないということではなく、肉体的にも、精神的にも、そして社会的にも、すべてが
-満たされた状態にあることをいいます。（日本WHO協会訳）」と書いてある通り、WHOは健康を肉体的・精神的・社会的という3つの側面からとらえている。一方、アドラーは「人生のすべての問題は、3つの主要な課題に分類することが出来る。すなわち、交友の課題、仕事の課題、愛の課題である[」と唱えた
-。\cite{ad2}
-　アドラー心理学では、ライフタスクについて、来談者にとっての親疎の関係から、仕事のタスク（Work Task）：永続しない人間関係、交友のタスク（Friendship Task）：永続するが、運命をともにしない人間関係、愛のタスク（Love or Family Task）：永続し、運命をともにする人間関係の3つに区別している。
-人間の問題について、このように恣意的に3つに分類することは、臨床上極めて有効で、アドラー心理学独自のことである。
-　
-　個人心理学(Individual Psychology)というのが正式名称であるが、個人心理学というと、個人を細かく分析したり個人のみに焦点を合わせるように誤解されやすいので、日本では、この名称はあまり使われていない。
-
-%%%　理論的な特徴として、
-%%%　\begin{itemize}
-%%%　 \item 人間を分割できない全体として把握し、理性と感情・意識と無意識などの対立を認めないこと(全体論)
-%%%　 \item 客観事実よりも、客観事実に対する個人の主観的認知のシステムを重視すること(認知論)
-%%%　 \item 精神内界よりも個人とその相手役との対人関係を理解しようとすること(対人関係論)
-%%%　\end{itemize}
-%%%　などがあげられる。
-%%%　　思想的な特徴としては、
-%%%　\begin{itemize}
-%%%　 \item 他者を支配しないで生きる決心をすること
-%%%　 \item 他者に関心を持って相手を援助しようとすること
-%%%　 \item 他者を支配しないで生きる決心をすること
-%%%　 \item 他者に関心を持って相手を援助しようとすること
-%%%　\end{itemize}
-%%%　などがあげられる。
-%%%　　治療技法としては、
-%%%　\begin{itemize}
-%%%　 \item 現実的に達成可能な治療目標の一致をとること(目標の一致）
-%%%　 \item クライエント、すなわり患者の言うことの主として目的について推量をして、それをクライエントに確認をとること(解釈と推量）
-%%%　 \item クライエント自身が自分の責任で解決しなければならない課題と、クライエントには責任がなく介入する権利がない課題とを区別すること（課題の分離）
-%%%　 \item 目標達成のためのさまざまなアイディアを提供すること（代替案の提示）　
-%%%　\end{itemize}
-%%%　55などがあげられる。
-
-　アドラー心理学は、社会精神医学・自我心理学・人間学的心理学などの現代の心理学諸潮流の理論的先駆けであるといわれている。（以上、日本アドラー心理学会Webページより）
-
-　アドラー心理学に基づいた治療、または、カウンセリングでは、アドラー心理学の理論に基づいて、来談者の共同体感覚を育成する目的で、様々な技法が用いられる。そのような治療中、または、カウンセリング中に、治療者、または、カウンセラーが、常に、意識しているのは、来談者のライフスタイルについてである。
-　アドラー心理学では、人間の問題は、すべて対人関係上の問題であると考える。したがって、アドラー心理学の治療、または、カウンセリングにおいては、来談者が抱えている問題は、対人関係上の問題であり、来談者が自らの使える力をうまく工夫すれば解決できるライフタスクであると考えている。
 
 
 
@@ -68,5 +21,5 @@
 
 　もうひとつの課題として、ビギナーのカウンセラーは閉じられた質問を多く用いる傾向にあるので、ビギナーのカウンセラーを開かれた質問が自由に使えるようになる必要がある。これをチェックできることが求められる。
 
-　本論文の構成は以下のとおりである．第1 章は，本論文の序論である．第2 章は，本論文の関連研究を挙げ，第3 章ではシステム設計，実装と、それに対してのカウンセラーによる評価について述べる．第4 章では本論文の結論と今後の展望について述べる．
+　本論文の構成は以下のとおりである．第１章では，本論文の序論である．第２章では，本論文の関連研究を挙げる。第３章では、システム開発にあたり必要になってくるヨガセラピーの競う事項について説明する。第４章では、提案システムのプロトタイプ開発とカウンセラーのフィードバックで最終システムの要件を整理する。第５章では、要件を満たすための視覚的表現(Visual Representation, Visual Design)、ユーザーインタラクションなどについて重点的に説明する。第６章では、前章で説明した提案システムに対してのカウンセラーによる評価について述べる．第７章ではそれに対する考察を述べる．第８章では本論文の結論と本研究が抱える今後の課題について述べる。
 　
