--- a/main.tex
+++ b/main.tex
@@ -22,9 +22,17 @@
 \input{chapter1.tex}
 \chapter{関連研究}
 \input{chapter2.tex}
-\chapter{本論}
+\chapter{ヨガセラピーについて}
 \input{chapter3.tex}
-\chapter{結論}
+\chapter{システム要件の抽出}
+\input{chapter4.tex}
+\chapter{システム概要}
+\input{chapter5.tex}
+\chapter{システム評価}
+\input{chapter6.tex}
+\chapter{考察}
+\input{chapter7.tex}
+\chapter{結論と今後の課題}
 \input{chapter8.tex}
 
 \bibliographystyle{kueethesis} % まず，文献目録を掲載する tex ファイルを開き、プリアンブルに使用したい BibTeX のスタイルファイル(bstファイル)を指定します
