--- a/chapter3.tex
+++ b/chapter3.tex
@@ -1,300 +1,64 @@
-　本章では，本研究で提案するビジュアル分析システムで用いる計算，技術について述べる．
+　本章では、システム開発にあたり必要となるヨガセラピーの基礎事項について説明する。
 
+　心療内科では、心身症やストレスからくる身体症状が取り扱われている。
 
-\section{対象データの前処理}
+　心理学の学派の一つに、アドラー心理学がある。アドラー心理学は、オーストリアの精神科医であるアルフレッド・アドラー (A.Adler)が創始し、その後継者たちが発展させた心理学の理論、思想と治療技法の体系である\cite{ad}。17世紀にルネ・デカルトが端を発して以来、1879年にヴィルヘルム・ヴントが世界初の心理学実験室を創設したことで哲学的ルーツから切り離された。ジョン・B・ワトソンが「人間の行動――学習されたか否かを問わず、人間の行動や発話の総体――をその主題とする、自然科学の一部門」と述べて以来、アメリカで行動主義が心理学の有力手法となった一方で、実験的証拠よりも観察と症例に基礎を置いたジグムント・フロイトの考えがヨーロッパを中心に広がっていった。フロイトの考えに初めは賛成していたカール・ユングとアルフレート・アドラーは、後にフロイトの考えに異を唱えた。カール・ユングが唱えたのは、人間誰しも、個人的経験には一切基づいていないあるはっきりと分離された無意識の部分、すなわち「集合的無意識」が存在し、「集合的無意識」は神話や象徴として世代を超えて代々受け継がてきた「元型（アーキタイプ）」から成り立っているということであった。
+　一方、アドラーが初めて示唆したのは、個人の心理は現時点における意識的諸力にも影響されるが、社会的領域や環境の影響も同様に見逃せないということであった。
+　現在、世界保健機関（WHO）憲章前文において「健康とは、病気でないとか、弱っていないということではなく、肉体的にも、精神的にも、そして社会的にも、すべてが
+満たされた状態にあることをいいます。（日本WHO協会訳）」と書いてある通り、WHOは健康を肉体的・精神的・社会的という3つの側面からとらえている。一方、アドラーは「人生のすべての問題は、3つの主要な課題に分類することが出来る。すなわち、交友の課題、仕事の課題、愛の課題である[」と唱えた
+。\cite{ad2}
+　アドラー心理学では、ライフタスクについて、来談者にとっての親疎の関係から、仕事のタスク（Work Task）：永続しない人間関係、交友のタスク（Friendship Task）：永続するが、運命をともにしない人間関係、愛のタスク（Love or Family Task）：永続し、運命をともにする人間関係の3つに区別している。
+人間の問題について、このように恣意的に3つに分類することは、臨床上極めて有効で、アドラー心理学独自のことである。
+　
+　個人心理学(Individual Psychology)というのが正式名称であるが、個人心理学というと、個人を細かく分析したり個人のみに焦点を合わせるように誤解されやすいので、日本では、この名称はあまり使われていない。
 
-
-　まず本論文の実験で用いる対象データについて述べる．後述する全ての実験において、対象データは共通して以下のデータを使用した。
-
-　本論文の実験で用いる対象データには「心療内科における摂食障害専門ヨーガ療法グループ」の「ヨーガ療法事例検討会」資料\cite{txt1}\cite{txt2}\cite{txt3}\cite{txt4}\cite{txt5}を使用した．
-
-　後述する提案システムに読み込ませるための前処理として、まず，各カウンセリング回ごとにテキストデータを分けた。
-
-
+　理論的な特徴として、
 \begin{itemize}
-\item 2014年9月11日\cite{txt1}
-\item 2014年11月19日\cite{txt2}
-\item 2014年1月29日\cite{txt3}
-\item X年8月10日\cite{txt4}
-\item X年10月1日\cite{txt4}
-\item X年10月30日\cite{txt5}
+ \item 人間を分割できない全体として把握し，理性と感情・意識と無意識などの対立を認めないこと
+ \item 客観事実よりも、客観事実に対する個人の主観的認知のシステムを重視すること
+ \item 精神内界よりも個人とその相手役との対人関係を理解しようとすること
 \end{itemize}
-　2014年9月11日については患者A,Bの2名がいたので、この日のデータについてはさらに患者ごとにテキストデータを分けた。またこの患者Aは2014年1月29日の患者と同一人物、患者Bは2014年11月19日の患者と同一人物である。以降、本論文においてもこの2名の患者を順に患者A,Bと呼ぶ。
-
-　一方、X年8月10日、X年10月1日、X年10月30日では同一の一名の患者が対象とされていた。対象データ内では「患者A」と呼ばれているが、前述の患者Aとは同一人物ではないため、以降、本論文中においては患者Cと呼ぶことにする。
-
-　ここで2014年9月11日、2014年11月19日、2014年1月29日においてはヨーガの瞑想前とヨーガの瞑想後のテキストデータが存在したので、瞑想前後で分けたテキストデータも用意した。つまり
+　などがあげられる。
+　　思想的な特徴としては、
 \begin{itemize}
-\item 2014年9月11日患者A
-\item 2014年9月11日患者A瞑想前
-\item 2014年9月11日患者A瞑想後
-\item 2014年9月11日患者B
-\item 2014年9月11日患者B瞑想前
-\item 2014年9月11日患者B瞑想後
-\item 2014年11月19日患者B
-\item 2014年11月19日患者B瞑想前
-\item 2014年11月19日患者B瞑想後
-\item 2014年1月29日患者A
-\item 2014年1月29日患者A瞑想前
-\item 2014年1月29日患者A瞑想後
-\item X年8月10日患者C
-\item X年10月1日患者C
-\item X年10月30日患者C
+ \item 他者を支配しないで生きる決心をすること
+ \item 他者に関心を持って相手を援助しようとすること
+ \item 他者を支配しないで生きる決心をすること
+ \item 他者に関心を持って相手を援助しようとすること
 \end{itemize}
-の計15個のテキストデータを用意した。
-
-　さらに、この提案システムの有用性を示すために模擬データを1個用意した。
-
-　以上、16個のカウンセリングの文字起こしテキストデータをそれぞれjsonファイルに変換した。[\{"a":"(本文)"\}]の形式で作成した．
-
-\section{提案システム１}
-
-\subsection{手法}
-
-
-　
-　次に、前セクションで前処理した後のjsonデータを、提案システムがどう処理するかを説明する。提案システムのスクリーンショットを図\ref{fig:systemtsukaikata}に示す。
- \begin{figure}
-   \begin{center}
-     \includegraphics[width=10cm]{systemtsukaikata.png}
-   \end{center}
-   \caption{提案システムのスクリーンショット}
-   \label{fig:systemtsukaikata}
- \end{figure}
-
-　まず、ブラウザ上で各テキストのjsonファイルを読み込んで形態素解析する．
-形態素解析には，JavaScript言語の形態素解析ライブラリであるkutomoji.jsを使用した．
-カウンセリング文字起こしテキストデータを形態素解析し，共起マップなどを描画して「家族」「仕事」「友人」に関連する単語を探す．そこから，カウンセラーからの質問形態と， 「家族」「仕事」「友人」の単語グループの時間経過に沿った分布変化を可視化した．
-　
-　本システムでは、患者ないしカウンセラーの一発言を、話者の交代によって判断するものとする。つまり、患者の一発言は、カウンセラーが喋り終わって患者が喋り始めてから、患者が喋り終わってカウンセラーが喋り始めるまでである。また、カウンセラーの一発言は、患者が喋り終わってから、あるいはカウンセラーが話を切り出し始めてから、カウンセラーが喋り終わって患者が喋り始めるまでである。
-
-　jsonファイル内の本文の形式について説明する．全角表示のコロン（：）で話者の交代を認識，全角表示のコロン（：），全角表示の句点（．）ないしクエスチョンマーク（？,?）で文の終わりを認識するよう設定されている．そのため，話者が交代するたびに全角表示のコロン（：）で区切れ目を示さないといけない．
-
-\subsubsection{積み重ね折れ線グラフ}
-　Fig.2において，まず積み重ね折れ線グラフは患者の1回1回の発言の中での，アドラー心理学の各カテゴリの分布を可視化している．ただし1回1回の発言は，話者の交代を発言の区切れ目とする．この積み重ね折れ線グラフにおいて青色は「仕事関係」，ピンク色は「愛（恋愛・家族関係）」，緑色は「交友（友人関係）」に密接に関係する単語を含む文の分布を表している．
-　横軸は時間軸を表現している。ただし対象データである書き起こしテキストデータからは実際の経過秒数は読み取れないので、読み込ませたデータ内における患者の発言量の合計に対して
-
-\subsubsection{カウンセラーの質問を表現する縦棒}
-　次に，積み重ね折れ線グラフにかかっている，紫色ないし濃いグレー色の縦棒は，カウンセラーの質問内容の形態を示す．紫色は5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」，濃いグレー色はYes/Noで答えられる，あるいは一言だけで簡単答えられるような「閉じられた質問」を表現している．第1章で述べた通り，患者が何に問題意識を感じているかをカウンセリングで引き出すには，カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．
-%　このシステムにおいて、
-
-\subsection{結果}
-
-　
-　模擬データでの可視化結果を図\ref{fig:system1mogi2}，2014年11月検討会 患者A瞑想後での可視化結果を図\ref{fig:system1a0911go}，2015年11月検討会 患者Cのデータでの可視化結果を図\ref{fig:system1_1002}に示す．
- \begin{figure}
-   \begin{center}
-     \includegraphics[width=10cm]{system1mogi2.png}
-   \end{center}
-   \caption{提案システム１の模擬データでの可視化結果}
-   \label{fig:system1mogi2}
- \end{figure}
- \begin{figure}
-   \begin{center}
-     \includegraphics[width=10cm]{system1a0911go.png}
-   \end{center}
-   \caption{提案システム１の'14年11月検討会A瞑想後での可視化結果}
-   \label{fig:system1a0911go}
- \end{figure}
- \begin{figure}
-   \begin{center}
-     \includegraphics[width=10cm]{system1_1002.png}
-   \end{center}
-   \caption{提案システム１の'15年11月検討会Cでの可視化結果}
-   \label{fig:system1_1002}
- \end{figure}
-
-
-　2016年1月の「心の可視化研究会」にて、12名の専門家に本システムを見ていただき、以下のコメントをいただいた。
-
+　などがあげられる。
+　　治療技法としては、
 \begin{itemize}
-\item クライエントからの返答だけでなく、カウンセラーの質問区分けも手動で修正したい．
-\item 原文から，セラピストから患者への質問事項の分類の指標として，患者の発言をうながして患者自身も気づいていなかったことを認知させるのが大事であるので，それぞれの発言量の可視化の実装を盛り込むべきであると考えられる．
-\item インタラクティブ性がない．現状ではその場でチェックボックスの選択を変えただけではグラフにその選択の変更が反映されず，1回1回ブラウザ上でページをリロードして，カウンセリングの文字起こしテキストデータのjsonファイルも読み込み直す必要が生じている．ブラウザ上でページをリロードしなくも，チェックボックスの選択を変えることでシームレスにグラフが変化してほしい．
+ \item 現実的に達成可能な治療目標の一致をとること
+ \item クライエント、すなわり患者の言うことの主として目的について推量をして、それをクライエントに確認をとること
+ \item クライエント自身が自分の責任で解決しなければならない課題と、クライエントには責任がなく介入する権利がない課題とを区別すること
+ \item 目標達成のためのさまざまなアイディアを提供すること
 \end{itemize}
+　などがあげられる。
 
+　アドラー心理学は、社会精神医学・自我心理学・人間学的心理学などの現代の心理学諸潮流の理論的先駆けであるといわれている。（以上、日本アドラー心理学会Webページより）
+
+　アドラー心理学に基づいた治療、または、カウンセリングでは、アドラー心理学の理論に基づいて、来談者の共同体感覚を育成する目的で、様々な技法が用いられる。そのような治療中、または、カウンセリング中に、治療者、または、カウンセラーが、常に、意識しているのは、来談者のライフスタイルについてである。
+　アドラー心理学では、人間の問題は、すべて対人関係上の問題であると考える。したがって、アドラー心理学の治療、または、カウンセリングにおいては、来談者が抱えている問題は、対人関係上の問題であり、来談者が自らの使える力をうまく工夫すれば解決できるライフタスクであると考えている。
+
+
+
+　臨床心理士資格取得者数は年を経るごとに増加傾向にあるが、ビギナーのカウンセラーは、上記のような「対人関係上の問題」すなわち「愛のタスク」・「仕事のタスク」・「交友のタスク」を、質問に対する回答としてクライエントから引き出すのに苦戦しているという問題がある。
+
+　そこで、ベテランのカウンセラーがビギナーのカウンセラーに指導する機会が設けられている。たとえば今回書き起こしテキストデータを使用した「心療内科における摂食障害専門ヨーガ療法グループ」事例検討会では、ビギナーのカウンセラーに対してカウンセリングに関するアドバイスがなされている。
+
+
+　そこで、本研究では、タイムライン形式の時間軸に沿った可視化によって、クライアントとセラピストの会話を可視化し、セラピストの発した質問によって会話の流れがどのように変化するのかを明らかにするWebシステムを開発した。
+
+
+　カウンセラーの質問内容については、大きく2種類に分けられている。YesまたはNoで答える質問、ないし短い言葉だけで答えられるような質問は「閉じられた質問」ないし「閉ざされた質問」と呼ばれている。これに対し、患者が5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」で答えるような質問は「開かれた質問」と呼ばれている。患者が何に問題意識を感じているかをカウンセリングで引き出すには、カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている。しかしビギナーのカウンセラーは「閉じられた質問」の割合が多く、患者が何に問題意識を感じているかをカウンセリングでうまく引き出せないケースが比較的多いとされている。
+
+　クライアントの会話としては、内容がどの課題領域（仕事、交友、愛、セルフタスク、スピリチュアル）に属するのか、セラピストの質問としては、内容がオープン（5W1Hを問うもの）またはクローズ（Yes/Noを問うもの）なのかを分類表示できることが必要である。
+
+　クライエントからの提出した話題が、どの領域に関するものか、カウンセリングの中でその領域がどのように変わっていくかを分析していくと、そのカウンセリングプロセスがより明確になると考えられる。タイムラインで見ると、最初にクライエントの関心がどこにあったのか、それに対してカウンセラーからの発話で異なった領域に話題が展開した、というような分析も可能になると考えられる。
+　クライエントの関心に関心を向けるというのがカウンセリングの基本ですので、このようにカウンセラーの関心でクライエントを誘導してしまうことはよろしくありませんので、そのためのチェックが可能になるものと考える。
+
+　もうひとつの課題として、ビギナーのカウンセラーは閉じられた質問を多く用いる傾向にあるので、ビギナーのカウンセラーを開かれた質問が自由に使えるようになる必要がある。これをチェックできることが求められる。
+
+　本論文の構成は以下のとおりである．第1 章は，本論文の序論である．第2 章は，本論文の関連研究を挙げ，第3 章ではシステム設計，実装と、それに対してのカウンセラーによる評価について述べる．第4 章では本論文の結論と今後の展望について述べる．
 　
-
-　
-　
-
-\subsection{考察}
-　クライエントからの返答だけでなく、カウンセラーの質問区分けもラジオボタンによって手動で行えるように修正したい．また、どの時間軸座標がどの発言を指し示すか明記しないと考察しがたいので，マウスオーバーによって発言内容が表示される仕組みを作りたい。
-
-　原文から，セラピストから患者への質問事項の分類の指標として，患者の発言をうながして患者自身も気づいていなかったことを認知させるのが大事であるので，それぞれの発言量の可視化の実装を盛り込むべきであると考えられる．
-
-
-
-
-
-\subsubsection{どこがどの発言を表しているかわからない}
-
-
-
-\subsubsection{インタラクティブ性がない}
-　描画後にラジオボタンを変えても反応がない。現状ではその場でチェックボックスの選択を変えただけではグラフにその選択の変更が反映されず，1回1回ブラウザ上でページをリロードして，カウンセリングの文字起こしテキストデータのjsonファイルも読み込み直す必要が生じている．ブラウザ上でページをリロードしなくも，チェックボックスの選択を変えることでシームレスにグラフが変化することが求められた．
-
-\subsubsection{「その他」}
-　「開かれた質問」「閉じられた質問」だけでなく、相づちや世間話を「その他」を設けるべきと考えられる。提案システム1においては、「なぜ」「何」などの5W1Hを訊くような疑問視を含む発言を「開かれた質問」として定義し、それ以外を「閉じられた質問」と定義していたので、提案システム1における「閉じられた質問」をさらに、以降のシステムにおいて「閉じられた質問」と「その他」にわける必要があると考えられる。
-
-
-\subsubsection{ラジオボタン表示時間}
-
-　カウンセリングの文字起こしテキストデータのjsonファイルの読み込み開始から選択肢の表示までに約10秒かかるので、この短縮が求められる．
-
-
-
-
-
-\section{提案システム２}
-
-
-　提案システム2で専門家からされた指摘を元に修正および改善を行い、提案システム3を作成した。
-
-
-
-\subsection{手法}
-
-　ここでは主に，提案システム2が抱えていた問題への対処について述べる．
-
-\subsubsection{どこがどの発言を表しているかわからない}
-　提案システム１では、どの時間軸座標がどの発言を指し示すか明記していなかった。その問題を解決するために、提案システム２においては、マウスオーバーによって発言内容が表示される仕組みを作った．カウンセラーからの質問の区分けを示す各縦棒について，それぞれその上をマウスオーバーするたびに，積み重ね折れ線グラフを描画するSVG領域のすぐ上に，各々その縦棒が指し示すカウンセラーからの質問に対応する発言，および，そのカウンセラーの発言から，患者の発言とカウンセラーの発言を含めてそれぞれ前後3発言ずつを描画するようにプログラムした．つまり，患者の発言が前後2発言ずつ，カウンセラーの発言が3発言表示されているようにした．
-．
-\subsubsection{インタラクティブ性}
-　また，提案システム1においてはインタラクティブ性がなかった．各単語を患者の話題の分野ごとにわけるチェックボックスについて，提案システム1ではその場でチェックボックスの選択を変えただけではグラフにその選択の変更が反映されず，１回１回ブラウザ上でページをリロードして，カウンセリングの文字起こしテキストデータのjsonファイルも読み込み直す必要が生じていた．
-
-　しかし提案システム2では，ブラウザ上でページをリロードしなくも，チェックボックスの選択を変えることでシームレスにグラフが変化するように改善した．また，患者の話題の分野を各単語ごとに決め打ちしたものだけでなく，決め打ちしていないものに関しても選択肢を表示し選択できるようにした．
-
-
-\subsubsection{「開かれた質問」・「閉じられた質問」・「その他」}
-　さらに提案システムでは，カウンセラーからの各質問においても，5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」なのか，Yes/Noで答えられる，あるいは一言だけで簡単答えられるような「閉じられた質問」なのか，あるいは無駄話・相づちなど，どちらにも分類されないような「その他」なのかを，ユーザーが手動で修正できるようにした．
-
-　カウンセラーからの各質問において，それぞれ「開かれた質問」・「閉じられた質問」・「その他」の選択肢が表示され，提案システム1で予測された選択肢にあらかじめチェックが入っているようプログラムした．そして，各単語を患者の話題の分野ごとにわけるチェックボックスと同様に，ブラウザ上でページをリロードしなくも，チェックボックスの選択を変えることでシームレスにグラフが変化するようにした．
-
-
-\subsubsection{「その他」}
-　「開かれた質問」「閉じられた質問」だけでなく、相づちや世間話などを含む「その他」を設けるべきと指摘されたので、提案システム１の仕組みにおいて「開かれた質問」と判定されなかったカウンセラーの発言のうち、終助詞「か」を含むものを「閉じられた質問」とし、それ以外を「その他」とした。
-
-　また、積み重ね折れ線グラフ上において、「閉じられた質問」を濃いグレー色の縦棒で、「その他」を薄いグレー色の縦棒で描画した。
-
-
-\subsubsection{ラジオボタン表示時間}
-
-　提案システム1においてカウンセリング文字起こしテキストデータのjsonファイルの読み込み開始から選択肢の表示までに約10秒かかっていたのを，提案システム2においては必要時間約4秒にまで抑えた．
-
-
-
-
-\subsection{結果}
-
-　模擬データでの可視化結果を図\ref{fig:2_mogi}，X年8月患者Cデータでの可視化結果を図\ref{fig:2_0801}に示す．
- \begin{figure}
-   \begin{center}
-     \includegraphics[width=10cm]{2_mogi.png}
-   \end{center}
-   \caption{提案システム２の模擬データでの可視化結果}
-   \label{fig:2_mogi}
- \end{figure}
- \begin{figure}
-   \begin{center}
-     \includegraphics[width=10cm]{2_0801.png}
-   \end{center}
-   \caption{提案システム２のX年8月患者Cデータでの可視化結果}
-   \label{fig:2_0801}
- \end{figure}
-
-　「愛」「仕事」などの分類に選択する単語について，品詞レベル（動詞・形容詞・名詞など）で分類することは不可能だと考えられる．たとえば，「仕事」という単語が出てきても，愛の課題としての夫についてのはなしをしているときは，そのシチュエーションでは愛の課題になる．動詞，形容詞も同じく，どの課題のシチュエーションの中で使用されているかによってどの分類かが決定されるので，この分類方法は不適当と考えられる．
-　よって，話題がこの３つの課題のどれに入っているか，という分類でしかできないと考えられる．つまり，１文がどの課題に入っているか，という分類が適当だと考えられる．
-　たとえば，「うちの夫は仕事にいくのを嫌がって，毎朝起きてこないんです．それを見ているだけで腹が立つんです．自分の同僚が同じように仕事に行きたがらなくて朝起きなかったという話を聞いても，さほど腹は立ちませんが，夫がそうなるのは絶対に許せない！！」というような文章については，最初の文は愛のタスク，　第２文は仕事のタスク，第３文は愛のタスクととらえられる．
-
-
-　その他，使用した際に不便だと感じたこと，もし実用的なものにするにはどういう機能がついていればいいか等，意見をいただいた．
-
-　発話量の折れ線グラフの色分けについては，その人の関心が向いている話題によって分けられるので，分類方法の工夫が必要だと考えられる．
-　また実際には，話している中で関心がどんどん飛んでいく人が多いため，どうしていくか
-　いずれにしても，セラピストの発話については，十分とらえられると思います．質問形式（開かれた，閉じられた）と解釈と，相槌・その他と無駄話に分ける．無駄話と相槌は同レベルではなく，カウンセリングに必要かどうかの重みが違うので，分けた方がよいと考えられる．
-　セラピストのスーパーヴィジョンとして使用していく方が，今は妥当だと考えられる．そのためには，セラピストの発話内容を正確に分類していく方が的確に可視化できると考えられる．
-　心理臨床におけるスーパーヴィジョンにおいて，客観性にもとづく指導が可能になることが求められる。
-　一部のjsonファイルについて、質問形式の設定において，セラピストとクライエントの会話が混在しており，クライエントの会話については設定ができなかった．ここでクライエントの会話文を質問形式と無駄話にわける意味はないので，会話形式については，セラピストの発話だけわけるべきである．
-　また，このような混在があったときに，ユーザー側で削除できるようになるとスピーディーに修正が可能と考えられる．
-
-\subsection{課題}
-
-　患者の発言について
-単語単位ではなく文単位で「愛」「交友」「仕事」を分類すべき
-セラピストの発言について
-「開かれた質問」「閉じられた質問」だけでなく、「解釈」「相づち」「無駄話」も分類すべき
-選択肢が多すぎる
-分量に応じて縦棒の太さや間隔を変えることを提案
-
-
-
-
-
-　セラピストの質問を表す縦軸の太さや間隔をセラピストや患者の発言数に応じて変更されたデザインを提案した。
-
-
-
-
-\section{提案システム３}
-
-
-　提案システム2でカウンセラーからされた指摘を元に、提案システム3を作成した。
-
-\subsection{手法}
-
-
-
-
-　ここでは主に，提案システム2が抱えていた問題への対処について述べる．
-
-　
-\subsubsection{「解釈」・「相づち」・「無駄話」}
-　提案システム2において、患者の発言について単語単位ではなく文単位で「愛」「交友」「仕事」を分類していた。
-　そこからさらに、提案システム3においては、カウンセラーの発言について「開かれた質問」「閉じられた質問」だけでなく，「その他」を設け，さらに「その他」を「解釈」「相づち」「無駄話」の3つに分類した．
-
-
-
-
-
-\subsubsection{その他の改善点}
-\begin{itemize}
-\item  　患者の発言について、単語単位ではなく文単位で「愛」「交友」「仕事」を分類するようにした。
-\item  　そもそも選択肢を減らすべきだったという問題に対しては，複数の可能性があるものについてのみ選択肢を表示することで改善を図った．
-\item  カウンセラーの１発言の分量に応じて縦棒の太さを、クライエントの１発言の分量に応じてカウンセラーの発言を表現する縦棒同士の間隔を変えた。こうすることによって、どの質問のあとに患者がたくさんの会話量を発したかがわかるようになった．
-\end{itemize}
-
-
-
-\subsection{結果}
-
-　提案システム3をカウンセラー1名に使っていただき、以下のコメントをいただいた。
-\begin{itemize}
-\item  　「質問形式が解釈、無駄話 の２種類しかないため、適切な分類ができませんでした。
- 
- 　閉じられた質問は、本来セラピスト側の解釈を確認するための質問です。しか
- し、質問形としては開かれた質問と対をなしていますので、これはこれでおいて
- おき、質問形式ではない解釈を「解釈」に分類するのが妥当と考えます。よって、
- 分類は、「開かれた質問」「閉じられた質問」「解釈」「相づち」「世間話」に
- 分けていただくといいですね。」
-\end{itemize}
-　
-
-\subsection{課題}
-
-
-
-\section{提案システム４}
-
-
-\subsection{手法}
-
-\subsubsection{折りたたみ機能を搭載したラジオボタン}
-　
-
-\subsubsection{画面全体のレイアウトの変更}
-　見やすさの観点から、ラジオボタンによって発言の分類を選択する部分と、縦棒をマウスオーバーした際に実際の文が表示される部分を、積み重ね折れ線グラフの下側に、横に並べて表示するようにした。
-
-\subsection{結果}
-
-\subsection{課題}
