--- a/chapter4.tex
+++ b/chapter4.tex
@@ -1,12 +1,12 @@
-　本章では，本研究で提案するビジュアル分析システムで用いる計算，技術について述べる．
+本章では，本研究で提案するビジュアル分析システムで用いる計算，技術について述べる．
 
 
-\section{対象データの前処理}
+\section{入力データの前処理}
 
 
-　まず本論文の実験で用いる対象データについて述べる．後述する全ての実験において、対象データは共通して以下のデータを使用した。
+まず本論文の実験で用いる対象データについて述べる．後述する全ての実験において、対象データは共通して以下のデータを使用した。
 
-　本論文の実験で用いる対象データには「心療内科における摂食障害専門ヨーガ療法グループ」の「ヨーガ療法事例検討会」資料\cite{txt1}\cite{txt2}\cite{txt3}\cite{txt4}\cite{txt5}を使用した．
+本論文の実験で用いる対象データには「心療内科における摂食障害専門ヨーガ療法グループ」の「ヨーガ療法事例検討会」資料\cite{txt1}\cite{txt2}\cite{txt3}\cite{txt4}\cite{txt5}を使用した．
 
 　後述する提案システムに読み込ませるための前処理として、まず，各カウンセリング回ごとにテキストデータを分けた。
 
@@ -47,7 +47,7 @@
 
 　以上、16個のカウンセリングの文字起こしテキストデータをそれぞれjsonファイルに変換した。[\{"a":"(本文)"\}]の形式で作成した．
 
-\section{提案システム１}
+\section{提案システムのプロトタイプ開発}
 
 \subsection{手法}
 
@@ -146,7 +146,7 @@
 
 
 
-\section{提案システム２}
+%\section{提案システム２}
 
 
 　提案システム2で専門家からされた指摘を元に修正および改善を行い、提案システム3を作成した。
@@ -185,63 +185,63 @@
 
 
 
-\subsection{結果}
+%\subsection{結果}
 
-　模擬データでの可視化結果を図\ref{fig:2_mogi}，X年8月患者Cデータでの可視化結果を図\ref{fig:2_0801}に示す．
- \begin{figure}
-   \begin{center}
-     \includegraphics[width=10cm]{2_mogi.png}
-   \end{center}
-   \caption{提案システム２の模擬データでの可視化結果}
-   \label{fig:2_mogi}
- \end{figure}
- \begin{figure}
-   \begin{center}
-     \includegraphics[width=10cm]{2_0801.png}
-   \end{center}
-   \caption{提案システム２のX年8月患者Cデータでの可視化結果}
-   \label{fig:2_0801}
- \end{figure}
-
-　「愛」「仕事」などの分類に選択する単語について，品詞レベル（動詞・形容詞・名詞など）で分類することは不可能だと考えられる．たとえば，「仕事」という単語が出てきても，愛の課題としての夫についてのはなしをしているときは，そのシチュエーションでは愛の課題になる．動詞，形容詞も同じく，どの課題のシチュエーションの中で使用されているかによってどの分類かが決定されるので，この分類方法は不適当と考えられる．
-　よって，話題がこの３つの課題のどれに入っているか，という分類でしかできないと考えられる．つまり，１文がどの課題に入っているか，という分類が適当だと考えられる．
-　たとえば，「うちの夫は仕事にいくのを嫌がって，毎朝起きてこないんです．それを見ているだけで腹が立つんです．自分の同僚が同じように仕事に行きたがらなくて朝起きなかったという話を聞いても，さほど腹は立ちませんが，夫がそうなるのは絶対に許せない！！」というような文章については，最初の文は愛のタスク，　第２文は仕事のタスク，第３文は愛のタスクととらえられる．
-
-
-　その他，使用した際に不便だと感じたこと，もし実用的なものにするにはどういう機能がついていればいいか等，意見をいただいた．
-
-　発話量の折れ線グラフの色分けについては，その人の関心が向いている話題によって分けられるので，分類方法の工夫が必要だと考えられる．
-　また実際には，話している中で関心がどんどん飛んでいく人が多いため，どうしていくか
-　いずれにしても，セラピストの発話については，十分とらえられると思います．質問形式（開かれた，閉じられた）と解釈と，相槌・その他と無駄話に分ける．無駄話と相槌は同レベルではなく，カウンセリングに必要かどうかの重みが違うので，分けた方がよいと考えられる．
-　セラピストのスーパーヴィジョンとして使用していく方が，今は妥当だと考えられる．そのためには，セラピストの発話内容を正確に分類していく方が的確に可視化できると考えられる．
-　心理臨床におけるスーパーヴィジョンにおいて，客観性にもとづく指導が可能になることが求められる。
-　一部のjsonファイルについて、質問形式の設定において，セラピストとクライエントの会話が混在しており，クライエントの会話については設定ができなかった．ここでクライエントの会話文を質問形式と無駄話にわける意味はないので，会話形式については，セラピストの発話だけわけるべきである．
-　また，このような混在があったときに，ユーザー側で削除できるようになるとスピーディーに修正が可能と考えられる．
-
-\subsection{課題}
-
-　患者の発言について
-単語単位ではなく文単位で「愛」「交友」「仕事」を分類すべき
-セラピストの発言について
-「開かれた質問」「閉じられた質問」だけでなく、「解釈」「相づち」「無駄話」も分類すべき
-選択肢が多すぎる
-分量に応じて縦棒の太さや間隔を変えることを提案
+%　模擬データでの可視化結果を図\ref{fig:2_mogi}，X年8月患者Cデータでの可視化結果を図\ref{fig:2_0801}に示す．
+% \begin{figure}
+%   \begin{center}
+%     \includegraphics[width=10cm]{2_mogi.png}
+%   \end{center}
+%   \caption{提案システム２の模擬データでの可視化結果}
+%   \label{fig:2_mogi}
+% \end{figure}
+% \begin{figure}
+%   \begin{center}
+%     \includegraphics[width=10cm]{2_0801.png}
+%   \end{center}
+%   \caption{提案システム２のX年8月患者Cデータでの可視化結果}
+%   \label{fig:2_0801}
+% \end{figure}
+%
+%　「愛」「仕事」などの分類に選択する単語について，品詞レベル（動詞・形容詞・名詞など）で分類することは不可能だと考えられる．たとえば，「仕事」という単語が出てきても，愛の課題としての夫についてのはなしをしているときは，そのシチュエーションでは愛の課題になる．動詞，形容詞も同じく，どの課題のシチュエーションの中で使用されているかによってどの分類かが決定されるので，この分類方法は不適当と考えられる．
+%　よって，話題がこの３つの課題のどれに入っているか，という分類でしかできないと考えられる．つまり，１文がどの課題に入っているか，という分類が適当だと考えられる．
+%　たとえば，「うちの夫は仕事にいくのを嫌がって，毎朝起きてこないんです．それを見ているだけで腹が立つんです．自分の同僚が同じように仕事に行きたがらなくて朝起きなかったという話を聞いても，さほど腹は立ちませんが，夫がそうなるのは絶対に許せない！！」というような文章については，最初の文は愛のタスク，　第２文は仕事のタスク，第３文は愛のタスクととらえられる．
 
 
+%　その他，使用した際に不便だと感じたこと，もし実用的なものにするにはどういう機能がついていればいいか等，意見をいただいた．
 
+%　発話量の折れ線グラフの色分けについては，その人の関心が向いている話題によって分けられるので，分類方法の工夫が必要だと考えられる．
+%　また実際には，話している中で関心がどんどん飛んでいく人が多いため，どうしていくか
+%　いずれにしても，セラピストの発話については，十分とらえられると思います．質問形式（開かれた，閉じられた）と解釈と，相槌・その他と無駄話に分ける．無駄話と相槌は同レベルではなく，カウンセリングに必要かどうかの重みが違うので，分けた方がよいと考えられる．
+%　セラピストのスーパーヴィジョンとして使用していく方が，今は妥当だと考えられる．そのためには，セラピストの発話内容を正確に分類していく方が的確に可視化できると考えられる．
+%　心理臨床におけるスーパーヴィジョンにおいて，客観性にもとづく指導が可能になることが求められる。
+%　一部のjsonファイルについて、質問形式の設定において，セラピストとクライエントの会話が混在しており，クライエントの会話については設定ができなかった．ここでクライエントの会話文を質問形式と無駄話にわける意味はないので，会話形式については，セラピストの発話だけわけるべきである．
+%　また，このような混在があったときに，ユーザー側で削除できるようになるとスピーディーに修正が可能と考えられる．
 
+%\subsection{課題}
 
-　セラピストの質問を表す縦軸の太さや間隔をセラピストや患者の発言数に応じて変更されたデザインを提案した。
+%　患者の発言について
+%単語単位ではなく文単位で「愛」「交友」「仕事」を分類すべき
+%セラピストの発言について
+%「開かれた質問」「閉じられた質問」だけでなく、「解釈」「相づち」「無駄話」も分類すべき
+%選択肢が多すぎる
+%分量に応じて縦棒の太さや間隔を変えることを提案
 
 
 
 
-\section{提案システム３}
+
+%　セラピストの質問を表す縦軸の太さや間隔をセラピストや患者の発言数に応じて変更されたデザインを提案した。
 
 
-　提案システム2でカウンセラーからされた指摘を元に、提案システム3を作成した。
 
-\subsection{手法}
+
+%\section{提案システム３}
+
+
+%　提案システム2でカウンセラーからされた指摘を元に、提案システム3を作成した。
+
+%\subsection{手法}
 
 
 
@@ -266,7 +266,7 @@
 
 
 
-\subsection{結果}
+%\subsection{結果}
 
 　提案システム3をカウンセラー1名に使っていただき、以下のコメントをいただいた。
 \begin{itemize}
@@ -280,11 +280,11 @@
 \end{itemize}
 　
 
-\subsection{課題}
+%\subsection{課題}
 
 
 
-\section{提案システム４}
+\section{カウンセラーからのフィードバック}
 
 
 \subsection{手法}
