--- a/chapter4.tex
+++ b/chapter4.tex
@@ -259,9 +259,10 @@
 
 \subsubsection{その他の改善点}
 \begin{itemize}
-\item  　患者の発言について、単語単位ではなく文単位で「愛」「交友」「仕事」を分類するようにした。
-\item  　そもそも選択肢を減らすべきだったという問題に対しては，複数の可能性があるものについてのみ選択肢を表示することで改善を図った．
-\item  カウンセラーの１発言の分量に応じて縦棒の太さを、クライエントの１発言の分量に応じてカウンセラーの発言を表現する縦棒同士の間隔を変えた。こうすることによって、どの質問のあとに患者がたくさんの会話量を発したかがわかるようになった．
+\item患者の発言について、単語単位ではなく文単位で「愛」「交友」「仕事」を分類するようにした。
+\itemそもそも選択肢を減らすべきだったという問題に対しては，複数の可能性があるものについてのみ選択肢を表示することで改善を図った．
+\itemカウンセラーの１発言の分量に応じて縦棒の太さを、クライエントの１発言の分量に応じてカウンセラーの発言を表現する縦棒同士の間隔を変えた。こうすることによって、どの質問のあとに患者がたくさんの会話量を発したかがわかるようになった．
+\item見やすさの観点から、ラジオボタンによって発言の分類を選択する部分と、縦棒をマウスオーバーした際に実際の文が表示される部分を、積み重ね折れ線グラフの下側に、横に並べて表示するようにした。
 \end{itemize}
 
 
@@ -286,15 +287,21 @@
 
 \section{カウンセラーからのフィードバック}
 
+%　発話量の折れ線グラフの色分けについては，その人の関心が向いている話題によって分けられるので，分類方法の工夫が必要だと考えられる．
+%　また実際には，話している中で関心がどんどん飛んでいく人が多いため，どうしていくか
+%　いずれにしても，セラピストの発話については，十分とらえられると思います．質問形式（開かれた，閉じられた）と解釈と，相槌・その他と無駄話に分ける．無駄話と相槌は同レベルではなく，カウンセリングに必要かどうかの重みが違うので，分けた方がよいと考えられる．
 
-\subsection{手法}
 
-\subsubsection{折りたたみ機能を搭載したラジオボタン}
-　
+\subsection{全ての選択肢を順番に表示}
+　選択肢をすべて表示してほしい
+　クライエントの発言に関するラジオボタンとカウンセラーの発言に関するラジオボタンをわけて表示していたが、これを実際の会話順に直して表示してほしいというレビューをいただいた。
 
-\subsubsection{画面全体のレイアウトの変更}
-　見やすさの観点から、ラジオボタンによって発言の分類を選択する部分と、縦棒をマウスオーバーした際に実際の文が表示される部分を、積み重ね折れ線グラフの下側に、横に並べて表示するようにした。
 
-\subsection{結果}
+\subsection{フォントサイズの向上}
+　フォントサイズ最小の部分が多くお年をめした方には読めないというレビューをいただいた1文1文を折りたたむことでフォントサイズ向上させる
 
-\subsection{課題}
+\subsection{色彩の改善}
+　フォントサイズ最小の部分が多くお年をめした方には読めないというレビューをいただいた1文1文を折りたたむことでフォントサイズ向上させる
+
+\subsection{配置}
+
