--- a/chapter4.tex
+++ b/chapter4.tex
@@ -305,3 +305,13 @@
 
 \subsection{配置}
 
+
+\subsection{文の区切れ目}
+例えば「ほんとに、朝も昼も見張られてないっていったら変な言い方ですけど、食べた
+いときに食べれる状況っていうのがすごく久しぶりで、なんか自分でもどうなん
+かなっていうのがあったんですけど、意外と普通にできたみたいな（笑）それは
+、ありますね・・・なんか家族がいたら食べなきゃいけなかったりとかするし」という文に対して、「・・・」より前の部分は「家族」「交友」「仕事」のどの分類にも属さず、「・・・」より後の部分は「家族」に属するが、プロトタイプバージョンにおいては「・・・」を「。」のような1文1文の区切れ目に設定してないので、区別した判定変更が提案システムユーザー側でできない。
+
+「・・・」を
+
+
