--- a/chapter8.tex
+++ b/chapter8.tex
@@ -6,6 +6,14 @@
 \item 
 \end{itemize}
 
+「いつもお世話になっております。この研究が進んでいくことによって、心理臨
+床におけるスーパーヴィジョンにおいて、客観性にもとづく指導が可能になって
+いけることを願っております。こういう着想はありませんでしたので、大変期待
+しているところです。」
+「いろいろとご尽力いただき、ありがとうございます。この研究が発展していけ
+ること、心から願っております。」
+とコメントをいただいている
+
 重要な役割を果たすことが明らかとなった．
 
 \section{課題}
@@ -13,7 +21,7 @@
 本研究で得られた結論を踏まえて，今後検討するべき課題を以下にまとめる．
 \begin{itemize}
 \item また，患者の話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや，カウンセラーの質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められる．
-\item 
+\item 縦棒の上に発言番号を振る
 \end{itemize}
 
 
