--- a/chapter8.tex
+++ b/chapter8.tex
@@ -22,6 +22,12 @@
 \begin{itemize}
 \item また，患者の話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや，カウンセラーの質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められる．
 \item 縦棒の上に発言番号を振る
+\item アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して、次に記す通りのレビューを得た。「クライエントの発話の分類ですが、自身の症状についての記述は、愛・交友・
+仕事のどれにも当てはまらないことが多く、第４のタスクとされるself task自
+己、第５のタスクとされるsupiritual taskスピリチュアルの二つを追加してい
+ただく方がいいかもしれません。症状に囚われている患者は、自己の課題が大半
+になるといえます。」
+\item 積み重ね折れ線グラフとその折れ線グラフ上に描画される縦棒
 \end{itemize}
 
 
