chapter5 color of sentences

--- a/chapter5.tex
+++ b/chapter5.tex
@@ -34,7 +34,9 @@
 
 分量に応じて縦棒の太さや間隔を変えることを提案
 
-文字色の改善→黒い文字を色のついた墨つきかっこ【】で囲う
+
+\section{文字色の改善}
+文字色の改善が求められていたが、文字色黒い文字を色のついた墨つきかっこ【】で囲う
 
 
 軸がない→追加
