--- a/chapter5.tex
+++ b/chapter5.tex
@@ -1,6 +1,14 @@
 前章では提案システムのプロトタイプの開発、およびそのプロトタイプに対するユーザーカウンセラーからのレビューをもとにした、提案システム要件抽出について説明した。
 
-それを受け、抽出した要件をみたした提案システムの開発を行った。本章ではその要件をみたした提案システムの概要について説明する。特に、要件を満たすための視覚的表現(Visual Representation, Visual Design)、ユーザーインタラクションなどを重点的に説明する。
+それを受け、抽出した要件をみたした提案システムの開発を行った。このシステムに模擬データを入力した際の描画結果のスクリーンショットを図\ref{fig:ver160203}に示す。本章ではその要件をみたした提案システムの概要について説明する。特に、要件を満たすための視覚的表現(Visual Representation, Visual Design)、ユーザーインタラクションなどを重点的に説明する。
+
+ \begin{figure}
+   \begin{center}
+     \includegraphics[width=10cm]{ver160203.png}
+   \end{center}
+   \caption{提案システムの模擬データでの可視化結果}
+   \label{fig:ver160203}
+ \end{figure}
 
 
 
@@ -9,7 +17,7 @@
 \section{縦棒をマウスオーバーすることで周辺の発言を表示}
 \begin{itemize}
 \item どこがどの発言を表しているかわからない
-\item ラジオボタンが多すぎてグラフが下の方に
+\item ラジオボタンが多すぎてグラフが下の方にいく
 \end{itemize}
 という問題に対しては、カウンセラーから患者への質問を示す縦棒をマウスオーバーすることによって、周辺の発言を表示する機能を追加することで解決を図った。
 　　　ラジオボタンとまとめて、グラフより下側に
@@ -32,16 +40,16 @@
 
 \section{分量に応じた縦棒の太さや間隔}
 
-分量に応じて縦棒の太さや間隔を変えることを提案
+分量に応じて縦棒の太さや間隔を変えることを提案した。
 
 
 \section{文字色の改善}
-文字色の改善が求められていたが、文字色黒い文字を色のついた墨つきかっこ【】で囲う
+文字色の改善が求められていたが、文字色黒い文字を色のついた墨つきかっこ【】で囲うようにした。
 
-
-軸がない→追加
+\section{軸の表示}
+積み重ね折れ線グラフにおいて、軸を表示するようにした。
 
 文字が小さい→変更
 
-選択肢
-時系列順に並ぶように変更
+\section{軸の表示}
+プロトタイプでは、患者の発言に関する選択肢がすべて表示された後にカウンセラーに関する発言が表示されるようになっていた。しかしそれではわかりづらいというレビューをもとに、元のテキストデータ通りの順番に並ぶように変更した。
