--- a/chapter3.tex
+++ b/chapter3.tex
@@ -39,31 +39,31 @@
 
 個人心理学(Individual Psychology)というのが正式名称であるが、個人心理学というと、個人を細かく分析したり個人のみに焦点を合わせるように誤解されやすいので、日本では、この名称はあまり使われていない。
 
-理論的な特徴として、
-\begin{itemize}
- \item 人間を分割できない全体として把握し，理性と感情・意識と無意識などの対立を認めないこと
- \item 客観事実よりも、客観事実に対する個人の主観的認知のシステムを重視すること
- \item 精神内界よりも個人とその相手役との対人関係を理解しようとすること
-\end{itemize}
-などがあげられる。
-思想的な特徴としては、
-\begin{itemize}
- \item 他者を支配しないで生きる決心をすること
- \item 他者に関心を持って相手を援助しようとすること
- \item 他者を支配しないで生きる決心をすること
- \item 他者に関心を持って相手を援助しようとすること
-\end{itemize}
-などがあげられる。
-治療技法としては、
-\begin{itemize}
- \item 現実的に達成可能な治療目標の一致をとること
- \item クライエント、すなわり患者の言うことの主として目的について推量をして、それをクライエントに確認をとること
- \item クライエント自身が自分の責任で解決しなければならない課題と、クライエントには責任がなく介入する権利がない課題とを区別すること
- \item 目標達成のためのさまざまなアイディアを提供すること
-\end{itemize}
-などがあげられる。
+%理論的な特徴として、
+%\begin{itemize}
+% \item 人間を分割できない全体として把握し，理性と感情・意識と無意識などの対立を認めないこと
+% \item 客観事実よりも、客観事実に対する個人の主観的認知のシステムを重視すること
+% \item 精神内界よりも個人とその相手役との対人関係を理解しようとすること
+%\end{itemize}
+%などがあげられる。
+%思想的な特徴としては、
+%\begin{itemize}
+% \item 他者を支配しないで生きる決心をすること
+% \item 他者に関心を持って相手を援助しようとすること
+% \item 他者を支配しないで生きる決心をすること
+% \item 他者に関心を持って相手を援助しようとすること
+%\end{itemize}
+%などがあげられる。
+%治療技法としては、
+%\begin{itemize}
+% \item 現実的に達成可能な治療目標の一致をとること
+% \item クライエント、すなわり患者の言うことの主として目的について推量をして、それをクライエントに確認をとること
+% \item クライエント自身が自分の責任で解決しなければならない課題と、クライエントには責任がなく介入する権利がない課題とを区別すること
+% \item 目標達成のためのさまざまなアイディアを提供すること
+%\end{itemize}
+%などがあげられる。
 
-アドラー心理学は、社会精神医学・自我心理学・人間学的心理学などの現代の心理学諸潮流の理論的先駆けであるといわれている。（以上、日本アドラー心理学会Webページより）
+%アドラー心理学は、社会精神医学・自我心理学・人間学的心理学などの現代の心理学諸潮流の理論的先駆けであるといわれている。（以上、日本アドラー心理学会Webページより）
 
 アドラー心理学に基づいた治療、または、カウンセリングでは、アドラー心理学の理論に基づいて、来談者の共同体感覚を育成する目的で、様々な技法が用いられる。そのような治療中、または、カウンセリング中に、治療者、または、カウンセラーが、常に、意識しているのは、来談者のライフスタイルについてである。
 アドラー心理学では、人間の問題は、すべて対人関係上の問題であると考える。したがって、アドラー心理学の治療、または、カウンセリングにおいては、来談者が抱えている問題は、対人関係上の問題であり、来談者が自らの使える力をうまく工夫すれば解決できるライフタスクであると考えている。
