--- a/chapter1.tex
+++ b/chapter1.tex
@@ -1,25 +1,27 @@
 
 
-　心療内科では、心身症やストレスからくる身体症状が取り扱われている。
+心療内科では、心身症やストレスからくる身体症状が取り扱われている。
 
 
-
-　臨床心理士資格取得者数は年を経るごとに増加傾向にあるが、ビギナーのカウンセラーは、上記のような「対人関係上の問題」すなわち「愛のタスク」・「仕事のタスク」・「交友のタスク」を、質問に対する回答としてクライエントから引き出すのに苦戦しているという問題がある。
-
-　そこで、ベテランのカウンセラーがビギナーのカウンセラーに指導する機会が設けられている。たとえば今回書き起こしテキストデータを使用した「心療内科における摂食障害専門ヨーガ療法グループ」事例検討会では、ビギナーのカウンセラーに対してカウンセリングに関するアドバイスがなされている。
+臨床心理士資格取得者数は年を経るごとに増加傾向にあるが、ビギナーのカウンセラーは、上記のような「対人関係上の問題」すなわち「愛のタスク」・「仕事のタスク」・「交友のタスク」を、質問に対する回答としてクライエントから引き出すのに苦戦しているという問題がある。
 
 
-　そこで、本研究では、タイムライン形式の時間軸に沿った可視化によって、クライアントとセラピストの会話を可視化し、セラピストの発した質問によって会話の流れがどのように変化するのかを明らかにするWebシステムを開発した。
+もうひとつの課題として、ビギナーのカウンセラーは閉じられた質問を多く用いる傾向にあるので、ビギナーのカウンセラーを開かれた質問が自由に使えるようになる必要がある。これをチェックできることが求められる。
+
+そこで、ベテランのカウンセラーがビギナーのカウンセラーに指導する機会が設けられている。たとえば今回書き起こしテキストデータを使用した「心療内科における摂食障害専門ヨーガ療法グループ」事例検討会では、ビギナーのカウンセラーに対してカウンセリングに関するアドバイスがなされている。
+
+ただし現状では、クライエントとビギナーのカウンセラーとのカウンセリング内容を動画で撮影し、その動画書き起こされたカウンセリング内容のテキストデータを、ベテランのカウンセラーらが目で読んで、議論をする、という流れであり、全体を読んで各々カウンセリング内容を分析するのに時間がかかる。
 
 
-　カウンセラーの質問内容については、大きく2種類に分けられている。YesまたはNoで答える質問、ないし短い言葉だけで答えられるような質問は「閉じられた質問」ないし「閉ざされた質問」と呼ばれている。これに対し、患者が5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」で答えるような質問は「開かれた質問」と呼ばれている。患者が何に問題意識を感じているかをカウンセリングで引き出すには、カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている。しかしビギナーのカウンセラーは「閉じられた質問」の割合が多く、患者が何に問題意識を感じているかをカウンセリングでうまく引き出せないケースが比較的多いとされている。
+そこで、本研究では、タイムライン形式の時間軸に沿った可視化によって、クライアントとセラピストの会話を可視化し、セラピストの発した質問によって会話の流れがどのように変化するのかを明らかにするWebシステムを開発した。
 
-　クライアントの会話としては、内容がどの課題領域（仕事、交友、愛、セルフタスク、スピリチュアル）に属するのか、セラピストの質問としては、内容がオープン（5W1Hを問うもの）またはクローズ（Yes/Noを問うもの）なのかを分類表示できることが必要である。
 
-　クライエントからの提出した話題が、どの領域に関するものか、カウンセリングの中でその領域がどのように変わっていくかを分析していくと、そのカウンセリングプロセスがより明確になると考えられる。タイムラインで見ると、最初にクライエントの関心がどこにあったのか、それに対してカウンセラーからの発話で異なった領域に話題が展開した、というような分析も可能になると考えられる。
+カウンセラーの質問内容については、大きく2種類に分けられている。YesまたはNoで答える質問、ないし短い言葉だけで答えられるような質問は「閉じられた質問」ないし「閉ざされた質問」と呼ばれている。これに対し、患者が5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」で答えるような質問は「開かれた質問」と呼ばれている。患者が何に問題意識を感じているかをカウンセリングで引き出すには、カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている。しかしビギナーのカウンセラーは「閉じられた質問」の割合が多く、患者が何に問題意識を感じているかをカウンセリングでうまく引き出せないケースが比較的多いとされている。
+
+クライアントの会話としては、内容がどの課題領域（仕事、交友、愛、セルフタスク、スピリチュアル）に属するのか、セラピストの質問としては、内容がオープン（5W1Hを問うもの）またはクローズ（Yes/Noを問うもの）なのかを分類表示できることが必要である。
+
+クライエントからの提出した話題が、どの領域に関するものか、カウンセリングの中でその領域がどのように変わっていくかを分析していくと、そのカウンセリングプロセスがより明確になると考えられる。タイムラインで見ると、最初にクライエントの関心がどこにあったのか、それに対してカウンセラーからの発話で異なった領域に話題が展開した、というような分析も可能になると考えられる。
 　クライエントの関心に関心を向けるというのがカウンセリングの基本ですので、このようにカウンセラーの関心でクライエントを誘導してしまうことはよろしくありませんので、そのためのチェックが可能になるものと考える。
 
-　もうひとつの課題として、ビギナーのカウンセラーは閉じられた質問を多く用いる傾向にあるので、ビギナーのカウンセラーを開かれた質問が自由に使えるようになる必要がある。これをチェックできることが求められる。
-
-　本論文の構成は以下のとおりである．第１章では，本論文の序論である．第２章では，本論文の関連研究を挙げる。第３章では、システム開発にあたり必要になってくるヨガセラピーの競う事項について説明する。第４章では、提案システムのプロトタイプ開発とカウンセラーのフィードバックで最終システムの要件を整理する。第５章では、要件を満たすための視覚的表現(Visual Representation, Visual Design)、ユーザーインタラクションなどについて重点的に説明する。第６章では、前章で説明した提案システムに対してのカウンセラーによる評価について述べる．第７章ではそれに対する考察を述べる．第８章では本論文の結論と本研究が抱える今後の課題について述べる。
+本論文の構成は以下のとおりである．第１章では，本論文の序論である．第２章では，本論文の関連研究を挙げる。第３章では、システム開発にあたり必要になってくるヨガセラピーの競う事項について説明する。第４章では、提案システムのプロトタイプ開発とカウンセラーのフィードバックで最終システムの要件を整理する。第５章では、要件を満たすための視覚的表現(Visual Representation, Visual Design)、ユーザーインタラクションなどについて重点的に説明する。第６章では、前章で説明した提案システムに対してのカウンセラーによる評価について述べる．第７章ではそれに対する考察を述べる．第８章では本論文の結論と本研究が抱える今後の課題について述べる。
 　
