--- a/chapter4.tex
+++ b/chapter4.tex
@@ -8,7 +8,7 @@
 
 本論文の実験で用いる対象データには「心療内科における摂食障害専門ヨーガ療法グループ」の「ヨーガ療法事例検討会」資料\cite{txt1}\cite{txt2}\cite{txt3}\cite{txt4}\cite{txt5}を使用した．
 
-　後述する提案システムに読み込ませるための前処理として、まず，各カウンセリング回ごとにテキストデータを分けた。
+後述する提案システムに読み込ませるための前処理として、まず，各カウンセリング回ごとにテキストデータを分けた。
 
 
 \begin{itemize}
@@ -19,11 +19,11 @@
 \item X年10月1日\cite{txt4}
 \item X年10月30日\cite{txt5}
 \end{itemize}
-　2014年9月11日については患者A,Bの2名がいたので、この日のデータについてはさらに患者ごとにテキストデータを分けた。またこの患者Aは2014年1月29日の患者と同一人物、患者Bは2014年11月19日の患者と同一人物である。以降、本論文においてもこの2名の患者を順に患者A,Bと呼ぶ。
+2014年9月11日については患者A,Bの2名がいたので、この日のデータについてはさらに患者ごとにテキストデータを分けた。またこの患者Aは2014年1月29日の患者と同一人物、患者Bは2014年11月19日の患者と同一人物である。以降、本論文においてもこの2名の患者を順に患者A,Bと呼ぶ。
 
-　一方、X年8月10日、X年10月1日、X年10月30日では同一の一名の患者が対象とされていた。対象データ内では「患者A」と呼ばれているが、前述の患者Aとは同一人物ではないため、以降、本論文中においては患者Cと呼ぶことにする。
+一方、X年8月10日、X年10月1日、X年10月30日では同一の一名の患者が対象とされていた。対象データ内では「患者A」と呼ばれているが、前述の患者Aとは同一人物ではないため、以降、本論文中においては患者Cと呼ぶことにする。
 
-　ここで2014年9月11日、2014年11月19日、2014年1月29日においてはヨーガの瞑想前とヨーガの瞑想後のテキストデータが存在したので、瞑想前後で分けたテキストデータも用意した。つまり
+ここで2014年9月11日、2014年11月19日、2014年1月29日においてはヨーガの瞑想前とヨーガの瞑想後のテキストデータが存在したので、瞑想前後で分けたテキストデータも用意した。つまり
 \begin{itemize}
 \item 2014年9月11日患者A
 \item 2014年9月11日患者A瞑想前
@@ -43,9 +43,9 @@
 \end{itemize}
 の計15個のテキストデータを用意した。
 
-　さらに、この提案システムの有用性を示すために模擬データを1個用意した。
+さらに、この提案システムの有用性を示すために模擬データを1個用意した。
 
-　以上、16個のカウンセリングの文字起こしテキストデータをそれぞれjsonファイルに変換した。[\{"a":"(本文)"\}]の形式で作成した．
+以上、16個のカウンセリングの文字起こしテキストデータをそれぞれjsonファイルに変換した。[\{"a":"(本文)"\}]の形式で作成した．
 
 \section{提案システムのプロトタイプ開発}
 
@@ -53,7 +53,7 @@
 
 
 　
-　次に、前セクションで前処理した後のjsonデータを、提案システムがどう処理するかを説明する。提案システムのスクリーンショットを図\ref{fig:systemtsukaikata}に示す。
+次に、前セクションで前処理した後のjsonデータを、提案システムがどう処理するかを説明する。提案システムのスクリーンショットを図\ref{fig:systemtsukaikata}に示す。
  \begin{figure}
    \begin{center}
      \includegraphics[width=10cm]{systemtsukaikata.png}
@@ -62,26 +62,30 @@
    \label{fig:systemtsukaikata}
  \end{figure}
 
-　まず、ブラウザ上で各テキストのjsonファイルを読み込んで形態素解析する．
+まず、ブラウザ上で各テキストのjsonファイルを読み込んで形態素解析する．
 形態素解析には，JavaScript言語の形態素解析ライブラリであるkutomoji.jsを使用した．
 カウンセリング文字起こしテキストデータを形態素解析し，共起マップなどを描画して「家族」「仕事」「友人」に関連する単語を探す．そこから，カウンセラーからの質問形態と， 「家族」「仕事」「友人」の単語グループの時間経過に沿った分布変化を可視化した．
 　
-　本システムでは、患者ないしカウンセラーの一発言を、話者の交代によって判断するものとする。つまり、患者の一発言は、カウンセラーが喋り終わって患者が喋り始めてから、患者が喋り終わってカウンセラーが喋り始めるまでである。また、カウンセラーの一発言は、患者が喋り終わってから、あるいはカウンセラーが話を切り出し始めてから、カウンセラーが喋り終わって患者が喋り始めるまでである。
+本システムでは、患者ないしカウンセラーの一発言を、話者の交代によって判断するものとする。つまり、患者の一発言は、カウンセラーが喋り終わって患者が喋り始めてから、患者が喋り終わってカウンセラーが喋り始めるまでである。また、カウンセラーの一発言は、患者が喋り終わってから、あるいはカウンセラーが話を切り出し始めてから、カウンセラーが喋り終わって患者が喋り始めるまでである。
 
-　jsonファイル内の本文の形式について説明する．全角表示のコロン（：）で話者の交代を認識，全角表示のコロン（：），全角表示の句点（．）ないしクエスチョンマーク（？,?）で文の終わりを認識するよう設定されている．そのため，話者が交代するたびに全角表示のコロン（：）で区切れ目を示さないといけない．
+jsonファイル内の本文の形式について説明する．全角表示のコロン（：）で話者の交代を認識，全角表示のコロン（：），全角表示の句点（．）ないしクエスチョンマーク（？,?）で文の終わりを認識するよう設定されている．そのため，話者が交代するたびに全角表示のコロン（：）で区切れ目を示さないといけない．
 
 \subsubsection{積み重ね折れ線グラフ}
-　Fig.2において，まず積み重ね折れ線グラフは患者の1回1回の発言の中での，アドラー心理学の各カテゴリの分布を可視化している．ただし1回1回の発言は，話者の交代を発言の区切れ目とする．この積み重ね折れ線グラフにおいて青色は「仕事関係」，ピンク色は「愛（恋愛・家族関係）」，緑色は「交友（友人関係）」に密接に関係する単語を含む文の分布を表している．
+Fig.2において，まず積み重ね折れ線グラフは患者の1回1回の発言の中での，アドラー心理学の各カテゴリの分布を可視化している．ただし1回1回の発言は，話者の交代を発言の区切れ目とする．この積み重ね折れ線グラフにおいて青色は「仕事関係」，ピンク色は「愛（恋愛・家族関係）」，緑色は「交友（友人関係）」に密接に関係する単語を含む文の分布を表している．
 　横軸は時間軸を表現している。ただし対象データである書き起こしテキストデータからは実際の経過秒数は読み取れないので、読み込ませたデータ内における患者の発言量の合計に対して
 
 \subsubsection{カウンセラーの質問を表現する縦棒}
-　次に，積み重ね折れ線グラフにかかっている，紫色ないし濃いグレー色の縦棒は，カウンセラーの質問内容の形態を示す．紫色は5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」，濃いグレー色はYes/Noで答えられる，あるいは一言だけで簡単答えられるような「閉じられた質問」を表現している．第1章で述べた通り，患者が何に問題意識を感じているかをカウンセリングで引き出すには，カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．
+
+Ericら\cite{taskdriven}は、トピックモデリングによって分けたトピックの時間分布を上下の非対称積み重ね折れ線グラフによって可視化した。一方本研究では、カウンセラーとクライエントの会話において、クライエントは文ごとに、カウンセラーは発言ごとに描画を行いたい、かつ選択肢表示のためにグラフを省スペースしたいという観点から、カウンセラーの発言を横軸より下に折れ線グラフとして描画するのではなく、患者の発言のグループ分布を示す積み重ね折れ線グラフに重ねて縦棒として表示するようにした。
+
+
+積み重ね折れ線グラフに重なっている，紫色ないし濃いグレー色の縦棒は，カウンセラーの質問内容の形態を示す．紫色は5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」，濃いグレー色はYes/Noで答えられる，あるいは一言だけで簡単答えられるような「閉じられた質問」を表現している．第1章で述べた通り，患者が何に問題意識を感じているかをカウンセリングで引き出すには，カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．
 %　このシステムにおいて、
 
 \subsection{結果}
 
 　
-　模擬データでの可視化結果を図\ref{fig:system1mogi2}，2014年11月検討会 患者A瞑想後での可視化結果を図\ref{fig:system1a0911go}，2015年11月検討会 患者Cのデータでの可視化結果を図\ref{fig:system1_1002}に示す．
+模擬データでの可視化結果を図\ref{fig:system1mogi2}，2014年11月検討会 患者A瞑想後での可視化結果を図\ref{fig:system1a0911go}，2015年11月検討会 患者Cのデータでの可視化結果を図\ref{fig:system1_1002}に示す．
  \begin{figure}
    \begin{center}
      \includegraphics[width=10cm]{system1mogi2.png}
@@ -105,7 +109,7 @@
  \end{figure}
 
 
-　2016年1月の「心の可視化研究会」にて、12名の専門家に本システムを見ていただき、以下のコメントをいただいた。
+2016年1月の「心の可視化研究会」にて、12名の専門家に本システムを見ていただき、以下のコメントをいただいた。
 
 \begin{itemize}
 \item クライエントからの返答だけでなく、カウンセラーの質問区分けも手動で修正したい．
@@ -119,9 +123,9 @@
 　
 
 \subsection{考察}
-　クライエントからの返答だけでなく、カウンセラーの質問区分けもラジオボタンによって手動で行えるように修正したい．また、どの時間軸座標がどの発言を指し示すか明記しないと考察しがたいので，マウスオーバーによって発言内容が表示される仕組みを作りたい。
+クライエントからの返答だけでなく、カウンセラーの質問区分けもラジオボタンによって手動で行えるように修正したい．また、どの時間軸座標がどの発言を指し示すか明記しないと考察しがたいので，マウスオーバーによって発言内容が表示される仕組みを作りたい。
 
-　原文から，セラピストから患者への質問事項の分類の指標として，患者の発言をうながして患者自身も気づいていなかったことを認知させるのが大事であるので，それぞれの発言量の可視化の実装を盛り込むべきであると考えられる．
+原文から，セラピストから患者への質問事項の分類の指標として，患者の発言をうながして患者自身も気づいていなかったことを認知させるのが大事であるので，それぞれの発言量の可視化の実装を盛り込むべきであると考えられる．
 
 
 
@@ -132,15 +136,15 @@
 
 
 \subsubsection{インタラクティブ性がない}
-　描画後にラジオボタンを変えても反応がない。現状ではその場でチェックボックスの選択を変えただけではグラフにその選択の変更が反映されず，1回1回ブラウザ上でページをリロードして，カウンセリングの文字起こしテキストデータのjsonファイルも読み込み直す必要が生じている．ブラウザ上でページをリロードしなくも，チェックボックスの選択を変えることでシームレスにグラフが変化することが求められた．
+描画後にラジオボタンを変えても反応がない。現状ではその場でチェックボックスの選択を変えただけではグラフにその選択の変更が反映されず，1回1回ブラウザ上でページをリロードして，カウンセリングの文字起こしテキストデータのjsonファイルも読み込み直す必要が生じている．ブラウザ上でページをリロードしなくも，チェックボックスの選択を変えることでシームレスにグラフが変化することが求められた．
 
 \subsubsection{「その他」}
-　「開かれた質問」「閉じられた質問」だけでなく、相づちや世間話を「その他」を設けるべきと考えられる。提案システム1においては、「なぜ」「何」などの5W1Hを訊くような疑問視を含む発言を「開かれた質問」として定義し、それ以外を「閉じられた質問」と定義していたので、提案システム1における「閉じられた質問」をさらに、以降のシステムにおいて「閉じられた質問」と「その他」にわける必要があると考えられる。
+「開かれた質問」「閉じられた質問」だけでなく、相づちや世間話を「その他」を設けるべきと考えられる。提案システム1においては、「なぜ」「何」などの5W1Hを訊くような疑問視を含む発言を「開かれた質問」として定義し、それ以外を「閉じられた質問」と定義していたので、提案システム1における「閉じられた質問」をさらに、以降のシステムにおいて「閉じられた質問」と「その他」にわける必要があると考えられる。
 
 
 \subsubsection{ラジオボタン表示時間}
 
-　カウンセリングの文字起こしテキストデータのjsonファイルの読み込み開始から選択肢の表示までに約10秒かかるので、この短縮が求められる．
+カウンセリングの文字起こしテキストデータのjsonファイルの読み込み開始から選択肢の表示までに約10秒かかるので、この短縮が求められる．
 
 
 
@@ -149,38 +153,38 @@
 %\section{提案システム２}
 
 
-　提案システム2で専門家からされた指摘を元に修正および改善を行い、提案システム3を作成した。
+提案システム2で専門家からされた指摘を元に修正および改善を行い、提案システム3を作成した。
 
 
 
 \subsection{手法}
 
-　ここでは主に，提案システム2が抱えていた問題への対処について述べる．
+ここでは主に，提案システム2が抱えていた問題への対処について述べる．
 
 \subsubsection{どこがどの発言を表しているかわからない}
-　提案システム１では、どの時間軸座標がどの発言を指し示すか明記していなかった。その問題を解決するために、提案システム２においては、マウスオーバーによって発言内容が表示される仕組みを作った．カウンセラーからの質問の区分けを示す各縦棒について，それぞれその上をマウスオーバーするたびに，積み重ね折れ線グラフを描画するSVG領域のすぐ上に，各々その縦棒が指し示すカウンセラーからの質問に対応する発言，および，そのカウンセラーの発言から，患者の発言とカウンセラーの発言を含めてそれぞれ前後3発言ずつを描画するようにプログラムした．つまり，患者の発言が前後2発言ずつ，カウンセラーの発言が3発言表示されているようにした．
+提案システム１では、どの時間軸座標がどの発言を指し示すか明記していなかった。その問題を解決するために、提案システム２においては、マウスオーバーによって発言内容が表示される仕組みを作った．カウンセラーからの質問の区分けを示す各縦棒について，それぞれその上をマウスオーバーするたびに，積み重ね折れ線グラフを描画するSVG領域のすぐ上に，各々その縦棒が指し示すカウンセラーからの質問に対応する発言，および，そのカウンセラーの発言から，患者の発言とカウンセラーの発言を含めてそれぞれ前後3発言ずつを描画するようにプログラムした．つまり，患者の発言が前後2発言ずつ，カウンセラーの発言が3発言表示されているようにした．
 ．
 \subsubsection{インタラクティブ性}
-　また，提案システム1においてはインタラクティブ性がなかった．各単語を患者の話題の分野ごとにわけるチェックボックスについて，提案システム1ではその場でチェックボックスの選択を変えただけではグラフにその選択の変更が反映されず，１回１回ブラウザ上でページをリロードして，カウンセリングの文字起こしテキストデータのjsonファイルも読み込み直す必要が生じていた．
+また，提案システム1においてはインタラクティブ性がなかった．各単語を患者の話題の分野ごとにわけるチェックボックスについて，提案システム1ではその場でチェックボックスの選択を変えただけではグラフにその選択の変更が反映されず，１回１回ブラウザ上でページをリロードして，カウンセリングの文字起こしテキストデータのjsonファイルも読み込み直す必要が生じていた．
 
-　しかし提案システム2では，ブラウザ上でページをリロードしなくも，チェックボックスの選択を変えることでシームレスにグラフが変化するように改善した．また，患者の話題の分野を各単語ごとに決め打ちしたものだけでなく，決め打ちしていないものに関しても選択肢を表示し選択できるようにした．
+しかし提案システム2では，ブラウザ上でページをリロードしなくも，チェックボックスの選択を変えることでシームレスにグラフが変化するように改善した．また，患者の話題の分野を各単語ごとに決め打ちしたものだけでなく，決め打ちしていないものに関しても選択肢を表示し選択できるようにした．
 
 
 \subsubsection{「開かれた質問」・「閉じられた質問」・「その他」}
-　さらに提案システムでは，カウンセラーからの各質問においても，5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」なのか，Yes/Noで答えられる，あるいは一言だけで簡単答えられるような「閉じられた質問」なのか，あるいは無駄話・相づちなど，どちらにも分類されないような「その他」なのかを，ユーザーが手動で修正できるようにした．
+さらに提案システムでは，カウンセラーからの各質問においても，5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」なのか，Yes/Noで答えられる，あるいは一言だけで簡単答えられるような「閉じられた質問」なのか，あるいは無駄話・相づちなど，どちらにも分類されないような「その他」なのかを，ユーザーが手動で修正できるようにした．
 
-　カウンセラーからの各質問において，それぞれ「開かれた質問」・「閉じられた質問」・「その他」の選択肢が表示され，提案システム1で予測された選択肢にあらかじめチェックが入っているようプログラムした．そして，各単語を患者の話題の分野ごとにわけるチェックボックスと同様に，ブラウザ上でページをリロードしなくも，チェックボックスの選択を変えることでシームレスにグラフが変化するようにした．
+カウンセラーからの各質問において，それぞれ「開かれた質問」・「閉じられた質問」・「その他」の選択肢が表示され，提案システム1で予測された選択肢にあらかじめチェックが入っているようプログラムした．そして，各単語を患者の話題の分野ごとにわけるチェックボックスと同様に，ブラウザ上でページをリロードしなくも，チェックボックスの選択を変えることでシームレスにグラフが変化するようにした．
 
 
 \subsubsection{「その他」}
-　「開かれた質問」「閉じられた質問」だけでなく、相づちや世間話などを含む「その他」を設けるべきと指摘されたので、提案システム１の仕組みにおいて「開かれた質問」と判定されなかったカウンセラーの発言のうち、終助詞「か」を含むものを「閉じられた質問」とし、それ以外を「その他」とした。
+「開かれた質問」「閉じられた質問」だけでなく、相づちや世間話などを含む「その他」を設けるべきと指摘されたので、提案システム１の仕組みにおいて「開かれた質問」と判定されなかったカウンセラーの発言のうち、終助詞「か」を含むものを「閉じられた質問」とし、それ以外を「その他」とした。
 
-　また、積み重ね折れ線グラフ上において、「閉じられた質問」を濃いグレー色の縦棒で、「その他」を薄いグレー色の縦棒で描画した。
+また、積み重ね折れ線グラフ上において、「閉じられた質問」を濃いグレー色の縦棒で、「その他」を薄いグレー色の縦棒で描画した。
 
 
 \subsubsection{ラジオボタン表示時間}
 
-　提案システム1においてカウンセリング文字起こしテキストデータのjsonファイルの読み込み開始から選択肢の表示までに約10秒かかっていたのを，提案システム2においては必要時間約4秒にまで抑えた．
+提案システム1においてカウンセリング文字起こしテキストデータのjsonファイルの読み込み開始から選択肢の表示までに約10秒かかっていたのを，提案システム2においては必要時間約4秒にまで抑えた．
 
 
 
@@ -246,12 +250,12 @@
 
 
 
-　ここでは主に，提案システム2が抱えていた問題への対処について述べる．
+ここでは主に，提案システム2が抱えていた問題への対処について述べる．
 
 　
 \subsubsection{「解釈」・「相づち」・「無駄話」}
-　提案システム2において、患者の発言について単語単位ではなく文単位で「愛」「交友」「仕事」を分類していた。
-　そこからさらに、提案システム3においては、カウンセラーの発言について「開かれた質問」「閉じられた質問」だけでなく，「その他」を設け，さらに「その他」を「解釈」「相づち」「無駄話」の3つに分類した．
+提案システム2において、患者の発言について単語単位ではなく文単位で「愛」「交友」「仕事」を分類していた。
+そこからさらに、提案システム3においては、カウンセラーの発言について「開かれた質問」「閉じられた質問」だけでなく，「その他」を設け，さらに「その他」を「解釈」「相づち」「無駄話」の3つに分類した．
 
 
 
@@ -269,15 +273,15 @@
 
 %\subsection{結果}
 
-　提案システム3をカウンセラー1名に使っていただき、以下のコメントをいただいた。
+提案システム3をカウンセラー1名に使っていただき、以下のコメントをいただいた。
 \begin{itemize}
  \item 「質問形式が解釈、無駄話 の２種類しかないため、適切な分類ができませんでした。
  
- 　閉じられた質問は、本来セラピスト側の解釈を確認するための質問です。しか
- し、質問形としては開かれた質問と対をなしていますので、これはこれでおいて
- おき、質問形式ではない解釈を「解釈」に分類するのが妥当と考えます。よって、
- 分類は、「開かれた質問」「閉じられた質問」「解釈」「相づち」「世間話」に
- 分けていただくといいですね。」
+閉じられた質問は、本来セラピスト側の解釈を確認するための質問です。しか
+し、質問形としては開かれた質問と対をなしていますので、これはこれでおいて
+おき、質問形式ではない解釈を「解釈」に分類するのが妥当と考えます。よって、
+分類は、「開かれた質問」「閉じられた質問」「解釈」「相づち」「世間話」に
+分けていただくといいですね。」
 \end{itemize}
 　
 
@@ -293,15 +297,15 @@
 
 
 \subsection{全ての選択肢を順番に表示}
-　選択肢をすべて表示してほしい
-　クライエントの発言に関するラジオボタンとカウンセラーの発言に関するラジオボタンをわけて表示していたが、これを実際の会話順に直して表示してほしいというレビューをいただいた。
+選択肢をすべて表示してほしい
+クライエントの発言に関するラジオボタンとカウンセラーの発言に関するラジオボタンをわけて表示していたが、これを実際の会話順に直して表示してほしいというレビューをいただいた。
 
 
 \subsection{フォントサイズの向上}
-　フォントサイズ最小の部分が多くお年をめした方には読めないというレビューをいただいた1文1文を折りたたむことでフォントサイズ向上させる
+フォントサイズ最小の部分が多くお年をめした方には読めないというレビューをいただいた1文1文を折りたたむことでフォントサイズ向上させる
 
 \subsection{色彩の改善}
-　フォントサイズ最小の部分が多くお年をめした方には読めないというレビューをいただいた1文1文を折りたたむことでフォントサイズ向上させる
+フォントサイズ最小の部分が多くお年をめした方には読めないというレビューをいただいた1文1文を折りたたむことでフォントサイズ向上させる
 
 \subsection{配置}
 
